--- a/秋招经历/面经.md
+++ b/秋招经历/面经.md
@@ -1,4 +1,4 @@
-## **刷题**
+## 一. **刷题**
 
 ### 面试问过的
 
@@ -58,7 +58,7 @@
 
 
 
-##  C++
+##  二 .C++
 
 + 在一台内存为2G的机器上，malloc(20G)会怎么样？new 20G呢？
 + 虚函数的作用及实现原理
@@ -147,7 +147,9 @@
   + 空悬指针： 指针最初指向的内存已经被释放了的一种指针。
   + 解决方法：使用完置空，或者使用智能指针。
 
-## STL
+---
+
+## 三. STL
 
 + 手写string类
 
@@ -157,12 +159,271 @@
 
 
 
-## 计算机网络
+---
 
-+ 计算机网络体系为什么要按照现有体系进行分层
-+ 服务器出现大量Time-wait状态的原因及解决方法 ，出现大量Close-wait状态的原因及解决方法
+## 四.调试
+
+### 1.gdb
+
+
+
+### 2.makefile
+
+
 
 ---
+
+## 五. 链接与编译
+
+### 1.编译与链接过程
+
++  **一个程序从开始运行到结束的完整过程，你能说出来多少?**
+
++  **静态链接与动态链接的区别？ 什么是共享库？**
+
+  + 预编译： 运行C预处理器(cpp)将C的源程序 hello.c 翻译成一个ASCII码的中间文件 hello.i. 
+
+    >  `gcc -E hello.c -o hello.i`
+
+    + 处理 “#include” 预编译指令，将文件内容替换到它的位置
+    + 删除所有的#define，展开所有的宏定义。 
+    + 处理所有的条件预编译指令，如 “#if”、“#endif”、“#ifdef”
+    + 删除所有的注释
+    + 添加行号和文件标识，便于编译时编译器产生调试用的行号信息
+
+  + 编译：驱动程序运行C编译器(gcc)，将hello.i翻一个一个ASCII汇编语言文件hello.s
+
+    >  `gcc -S hell0.i -o hello.s`
+
+    1. 把预编译之后生成的xxx.i或xxx.ii文件，进行一系列词法分析、语法分析、语义分析及优化后，生成相应的汇编代码文件。
+    2. 词法分析：将源代码程序输入到扫描机中，将其中的字符序列分割成一系列的记号，类似于有限状态机
+    3. 语法分析：对由扫描器产生的记号进行语法分析，产生语法树。语法分析器完成的是对表达式语法层面的分析
+    4. 语义分析：语义分析器则对表达式是否有意义进行判断，其分析的语义是静态语义——在编译期能分期的语义，相对应的动态语义是在运行期才能确定的语义。
+    5. 优化：源代码级别的一个优化过程。 
+    6. 目标代码生成：由代码生成器将中间代码转换成目标机器代码，生成一系列的代码序列——汇编语言表示。
+    7. 目标代码优化：目标代码优化器对上述的目标机器代码进行优化，寻找合适的寻址方式、使用位移来替代乘法运算、删除多余的指令等。
+
+  + 汇编：运行汇编器(as)，将 hello.s 翻译成一个可重定位目标文件 hello.o
+
+    > `gcc -c hell0.s -o hello.o`
+
+    + 汇编器用来将汇编语言源程序转换为机器指令序列。
+    + 汇编结果是一个 可重定位目标文件 (如hello.o)，其中包含的是不可读的二进制代码，必须用相应的工具软件来查看其内容。
+
+  + 链接： 运行连接器程序**(ld)**，将**hello.o**和一些必要的系统目标文件组合起来，创建一个可执行文件**prog**:
+
+    > `gcc hell0.o -o hello`
+
+    + 将不同的源文件产生的目标文件进行链接，从而形成一个可以执行的程序。链接分为静态链接和动态链接:
+      + 静态链接：
+        + 对函数库的链接是放在编译时期完成的是静态链接 。 所有相关的目标文件与牵涉到的函数库被链接合成一个可执行文件。 所有需要的函数已复制到相关位置 。Linux下文件名为`libxxx.a`的形式 。
+        +  空间浪费：因为每个可执行程序中对所有需要的目标文件都要有一份副本，如果多个程序对同一个目标文件都有依赖，会出现同一个目标文件都在内存存在多个副本; 
+        + 更新困难：每当修改库函数代码，都需要重新进行编译链接形成可执行程序。
+        + 运行速度快：可执行程序中具备了所有执行程序所需要的任何内容， 在执行的时候运行速度快。
+      + 动态链接：
+        + 基本思想是把程序按照模块拆分成各个相对独立部分，库函数的链接载入推迟到程序运行时才链接在一起形成一个完整的程序，动态库文件名`lib**.so`。
+        + 共享库：即使每个程序都依赖同一个库，这多个程序在执行时共享同一份副本
+        + 更新方便：更新时只需要替换原来的目标文件，而无需将所有的程序再重新链接一遍
+        + 性能损耗：把链接推迟到了程序运行时，所以每次执行程序都需要进行链接
+
+---
+
++   **介绍一下静态库与动态库的创建与使用**
+
+  + **静态库**
+
+    + **静态库命名规则：** lib + 库的名字 + .a
+
+    + **制作规则：**
+
+      + **生成对应的.o文件：** 参数 -c
+      + **将生成的.o文件进行打包：** ar rcs + 静态库的名字(libMyCal.a) + 生成的所有.o文件
+
+    + **发布和使用静态库：**
+
+      + 发布静态库
+      + 头文件
+
+    + **例子：**
+
+      <div align = center><img src="../图片/链接2.png" width="250px" /></div>
+
+      + include文件夹存放头文件，src文件夹存放源文件，lib文件夹存放生成的库文件
+
+      + 生成.o文件
+
+        ```bash
+        gcc *.c -c -I ../include 
+        ```
+
+      + 打包
+
+        ```bash
+        ar rcs libMyCal.a *.o
+        mv libMyCal.a ../lib
+        ```
+
+        <div align = center><img src="../图片/链接3.png" width="210px" /></div>
+
+      + 利用头文件和静态库来运行程序
+
+        ```bash
+        gcc main.c lib/libMyCal.a -o sum -I include
+        ```
+
+        ```bash
+        # -I include头文件
+        # -L 库的目录
+        # -l 库的名字，去头去尾
+        gcc main.c -I include -L lib -l MyCal -o sum
+        ```
+
+    + 利用 nm命令 查看静态库内容
+
+      <div align = center><img src="../图片/链接4.png" width="300px" /></div>
+
+
+  + 动态库
+
+    + **动态库命名规则：** lib + 库的名字 + .so
+
+    + **制作步骤：**
+
+      + **生成与位置无关的代码(.o) ：** 参数 -fPIC -c
+
+        <div align = center><img src="../图片/链接5.png" width="500px" /></div>
+
+        > + 静态库.o在代码段每次位置都相同，所以是与位置有关。
+        > + 动态库不会打包到程序中，只有在运行到需要时才会加载到共享库区域，每次加载时放入的位置都不同，所以与位置无关。
+
+      + **将.o打包成动态库：** `gcc -shared  -o libMyCal.so *.o -I include`
+
+    + **例子：**
+
+      + 生成.o文件
+
+        ```bash 
+        gcc -fPIC -c *.c -I ../include
+        ```
+
+      + 打包成共享库
+
+        ```bash
+        gcc -shared  -o libMyCal.so *.o -I ../include
+        mv libMyCal.so ../lib
+        ```
+
+        <div align = center><img src="../图片/链接6.png" width="250px" /></div>
+
+      + 利用动态库和头文件来运行程序
+
+        ```bash 
+        gcc main.c lib/libMyCal.so -o mysum -I include
+        
+        gcc main.c -I include -L ./lib -l MyCal -o mysum
+        ```
+
+        <div align = center><img src="../图片/链接7.png" width="800px" /></div>
+
+        > 没有给动态链接器指定动态库libMyCal.so的路径
+
+    + **解决动态链接库失败的问题**
+
+      + 直接放入系统库目录——不推荐
+
+      + 利用export LD_LIBRARY_PATH=目录 来临时添加，终端关闭后会失效
+
+      + 将上述方法写入bashrc——也不推荐
+
+      + 找到动态连接器的配置文件 
+
+        ```bash
+        cd /etc
+        sudo vim ld.so.conf
+        # 动态库的路径写入配置文件
+        /Users/zhangyongbin/Desktop/Cal/lib
+        # 更新
+        sudo ldconfig -v
+        ```
+
+
+---
+
++  **gcc 与 g++ 的区别？**
+
+  + 从文件角度：
+    + 后缀为 .c 的， gcc 把它当作是C程序， g++当作是C++程序；
+    + 后缀为 .cpp 的，两者都会认为是 C++程序
+    + 虽然 C++是 C 的超集，但是两者对语法的要求是有区别的 ： printString在 c++ 编译环境下是未定义的
+  + 编译和链接的角度：
+    + 编译可以用 gcc/g++； g++会自动调用 gcc，二者等价 。
+    + 链接可以用 g++或者 gcc-lstce++。 因为 gcc 命令不能自动和 c ++程序使用的库链接，所以通常使用 g++来完成链接 。 
+
+  + extern ”C”与 gcc/g++ 并无关系，无论是 gcc 还是 g++，用 extern”C”时，都是以 C 的命名方式来为symbol命名；否则，都以 C++方式命名。
+
+---
+
+### 2.目标文件
+
++  **目标文件是什么？有哪几种类型？**
+  + 目标文件有三种形式:
+    + 可重定位目标文件：包含二进制文件和代码，其形式在编译时和其他可重定位目标文件合并起来，创建一个可执行目标文件
+      + 每个.o文件由对应的.c文件生成 
+      + 每个.o文件代码和数据地址 都从**0**开始
+    + 可执行目标文件：
+      + 包含的代码和数据可以被直接复制到内存并被执行
+      + 代码和数据地址为虚拟地址空间中的地址
+    + 共享目标文件。
+      + 特殊的可重定位目标文件，能在 装入或运行时被装入到内存并自动被链接 ，称为共享库文件
+
+---
+
+## 六. 计算机网络
+
+### 0.计算机网络基础
+
++  **OSI的七层模型是什么？有哪些功能？**
+  + 物理层：底层数据传输，如网线;网卡标准。传输的数据称为比特流
+  +  数据链路层：定义数据的基本格式，如何传输，如何标识;如网卡MAC地址。 传输的数据称为帧
+  + 网络层：定义IP编址，定义路由功能：如不同设备的数据转发。 传输的数据称为包
+  + 传输层：端到端传输数据的基本功能;如 TCP、UDP。 传输的数据称为段
+  + 会话层：控制应用程序之间会话能力;如不同软件数据分发给不同软件。 
+  + 表示层：数据格式标识，基本压缩加密功能。
+  + 应用层：各种应用软件，包括 Web 应用。
+
+---
+
++  **计算机网络体系为什么要按照现有体系进行分层？**
+  + 各层之间相互独立：高层不需要知道底层功能是如何实现的，只需知道通过与底层提供的接口就获得所需要的服务
+  + 灵活性好：各层的实现无论如何修改，只要提供的功能与接口保持不变，就不会对其他各层以及整个系统产生影响
+  + 易于实现和标准化：采取规范的层次结构去组织网络功能与协议，可以将计算机网络复杂的通信过程划分为有序的连续动作与有序的交互过程，使网络系统变得易于设计，实现和标准化
+
+---
+
++  **网络的七层/五层模型主要的协议有哪些？**
+
+  <img src="../图片/Net4.png" width="400px" />
+
+  +  **ARP(地址解析协议)：实现由 IP 地址得到 MAC 地址。**
+    + 主机 A 知道主机 B 的 IP 地址，但是 ARP 高速缓存中没有该 IP 地址到 MAC 地址的映射，A 会通过广播发送 ARP 请求分组，B 收到请求后会发送 ARP 响应分组给 A 告知其 MAC 地址，随后 A 在高速缓存中写入 B 的 IP 地址到 MAC 地址的映射。
+  +  **RIP(内部网关协议)：基于距离向量的路由选择协议。**
+    + RIP 按固定的时间间隔仅和相邻路由器交换自己的路由表，经过若干次交换之后，所有路由器最终会知道到达本自治系统中任何一个网络的最短距离和下一跳路由器地址。
+  +  **IP(互联网协议)：提供一种不可靠，无连接的数据包交付服务。依赖其他层协议进行差错控制。转发路由需要IP**
+  +  **ICMP(网际控制报文协议)：ICMP允许主机或路由器报告差错情况和提供相关异常情况的报告。**
+    + ICMP报文作为IP层数据报的数据，加上数据报的首部，组成 IP 数据报发送出去。
+    + ICMP报文种类：
+      + 差错报告报文：（类型值：报文类别）
+        + 3：终点不可达
+        + 11：时间超过
+        + 12：参数问题
+        + 5：改变路由
+      + 询问报文：
+        + 8/0：会送请求或回答
+        + 13/14：时间戳请求或回答
+    + 应用：
+      + ping：测试两台主机之间的连通性。
+      + Traceroute：用来跟踪一个分组从源点到终点的路径。
+  +  **IGMP(网际组管理协议)：负责IP组播成员管理的协议，用来在IP主机和与其直接相邻的组播路由器之间建立、维护组播组成员关系。**
 
 ### 1.网络层
 
@@ -172,12 +433,27 @@
 
 ### 2.TCP层
 
-+ TCP如何实现可靠传输
-  + TCP序列号
-+ 那TCP如何用序列号来保证可靠传输
-  + 介绍了下 握手时交换initial sequence number、ACK、超时重传 和 快速重传
-+ 讲讲TCP KeepAlive(保活机制,即心跳包)
-+ 为什么喜欢在应用层定义KeepAlive而不用TCP协议栈中自带的？(我回答更灵活,可以自定义配置比如消息类型，时间间隔，接收后的处理)
++  **是什么是TCP 粘包/拆包 ？ 发生的原因？**
+
+  + 一个完整的业务可能被TCP拆分成多个包发送，也有可能多个包数据到接收方接收时粘成一包，这个就是TCP的拆包和粘包问题。
+  + 原因：
+    + 因为TCP默认会使用 **Nagle算法** ，此算法会导致粘包问题。	
+      + 只有上一个分组得到确认，才会发送下一个分组;
+      + 收集多个小分组，在一个确认到来时一起发送。
+    + 应用程序写入数据的字节大小大于套接字发送缓冲区大小
+    + 进行MSS大小的TCP分段。( MSS=TCP报文段长度-TCP首部长度)
+
+  + 解决方法：
+    + 消息定长。
+    + 在包尾部增加回车或者空格符等特殊字符进行分割
+    + 将消息分为消息头和消息尾。
+    + 使用其它复杂的协议，如RTMP协议等。
+
+---
+
++  **讲讲TCP KeepAlive(保活机制,即心跳包)**
+  + TCP连接的双方在连接空闲状态时，如果一方意外崩溃、当机、网线断开或路由器故障，另一方无法得知TCP连接已经失效。另一方并不知道对端的情况，会一直维护这个连接。长时间的积累会导致非常多的半打开连接，造成端系统资源的消耗和浪费，
+  + 所以当一个 TCP 连接建立之后，启用 TCP Keepalive 的一端便会启动一个计时器，当这个计时器经过tcp_keep-alive_time时间到达 0 之后便会被发出纯 ACK 包去进行探测。根据对方的回应做出后序操作。
 
 ---
 
@@ -206,6 +482,19 @@
 
 ---
 
++  **一台机器能够使用的端口号上限是多少，是否可以修改?如果想要用的端口超过这个限制怎么办? **
+  + 65536个。 TCP的报文头部源端口号和目的端口号的长度是16位，表示 $2^{16}=65536$ 个不同端口号。但0到1023是知名服务端口，所以实际上会少1024个端口号。
+  + 而对于服务器来说，端口数目与65536无关，受限Linux可以打开的文件数量，并且通过MaxUserPort 进行配置。
+
+---
+
++   **封包和拆包你听说过吗?它是基于TCP还是UDP的?**
++  封包和拆包都是基于TCP的。因为TCP是无边界的流传输，所以需要对TCP进行封包和拆包，确保发送和接收的数据不粘连。
+    + 封包：在发送数据报时为每个TCP数据包加上一个包头，将数据报分为包头和包体两个部分。包头是一个固定长度的结构体，里面包含该数据包的总长度。 
+  + 拆包：接收方在接收到报文后提取包头中的长度信息进行截取。
+
+---
+
 +  **用户数据报协议UDP(User Datagram Protocol) 有什么特点？**
 
   1. 面向报文的，对应用层交付的报文，不合并也不拆分，加上首部之后直接发送
@@ -227,6 +516,13 @@
     + 目的端口： 目的端口号。 在终点交付报文时必须使用
     + 长度：UDP数据报的长度，最小值为8
     + 检验和：检验UDP 数据报在传输过程中是否出错，出错则丢弃
+
+---
+
++  **在进行UDP编程的时候，一次发送多少bytes好?**
+  + IP数据报大于1500字节(MTU)时需要分片。建议将UDP的数据控制在1472字节以下(1500-ip头-UDP头).
+  + 进行Internet编程时则不同，因为Internet上的路由器可能会将MTU设为不同的值. 如果我们假定MTU为1500来发送数据的,而途经的某个网络的MTU值小于1500字节,那么系统将会使用一 系列的机制来调整MTU值,使数据报能够顺利到达目的地,这样就会做许多不必要的操作.
+  + 鉴于Internet上的标准MTU值为576字节。建议在进行Internet的UDP编程时. 最好将UDP的数据长度控件在548字节(576-8-20)以内
 
 ---
 
@@ -264,6 +560,8 @@
     + 数据偏移， 保留，紧急URG，确认ACK，推送PSH，复位RST，同步SYN，终止FIN，窗口 (2 bytes)
     + 检验和  (2 bytes)，紧急指针 (2 bytes)
     + 选项字段 ，填充(首部是4字节的整数倍)
++   **TCP 头部有哪些信息？具体什么作用？**
++   **常见TCP的连接状态有哪些?**
 
 ---
 
@@ -296,6 +594,12 @@
 
     > + 文件描述符限制，Socket 都是文件，要通过 ulimit 配置文件描述符的数目;
     > + 内存限制
+
+---
+
++  **什么是半连接队列？**
+  + 服务器第一次收到客户端的 SYN 之后处于 SYN_RCVD 状态，此时双方还没有完全建立其连接，服务器会把此种状态下请求连接放在一个 **队列** 里，这就是 **半连接队列** 。
+  + 对应自然有 **全连接队列**，就是已经完成三次握手，建立起连接的就会放在全连接队列中。如果队列满了就有可能会出现丢包现象。
 
 ---
 
@@ -372,7 +676,7 @@
 
 ---
 
-+  **初始序列号 ISN 是如何随机产生的?**
++  **初始序列号 ISN(Initial Sequence Number) 是如何随机产生的?**
 
   + ISN = M + F (localhost, localport, remotehost, remoteport)
 
@@ -412,6 +716,26 @@
 
 ---
 
++  **对于FIN_WAIT_2，CLOSE_WAIT状态和TIME_WAIT状态?你知道多少?**
+
+  + FIN_WAIT_2:
+
+    + 半关闭状态。
+    + 发送断开请求一方还有接收数据能力，但已经没有发送数据能力。
+
+  +  CLOSE_WAIT状态:
+
+    + 被动关闭连接一方接收到FIN包会立即回应ACK包表示已接收到断开请求。
+
+    + 被动关闭连接一方如果还有剩余数据要发送就会进入CLOSED_WAIT状态。
+
+  +  TIME_WAIT状态:
+
+    + 又叫2MSL等待状态。 如果客户端直接进入CLOSED状态，如果服务端没有接收到最后一次ACK包会在超时之后重新再发FIN包，此时因为客户端已经CLOSED，所以服务端就不会收到ACK而是收到RST。
+    + 所以 TIME_WAIT状态目的是防止最后一次握手数据没有到达对方而触发重传FIN准备的。 在2MSL时间内，同一个socket不能再被使用，否则有可能会和旧连接数据混淆(如果新连接和旧 连接的socket相同的话)。
+
+---
+
 +   **MSL 与 TTL 的区别是什么？**
 
    +  MSL 是 Maximum Segment Lifetime，表示任何报文在网络上存在的最⻓时间，超过这个时间报文将被丢弃。
@@ -436,9 +760,51 @@
 
 ---
 
-+  **TIME_WAIT 过多有什么危害?**
-  + 客户端TIME_WAIT过多，就会导致端口资源被占用，被占满就会导致无法创建新的连接。
-  + 服务端只监听一个端口，但是会把连接扔给处理线程，所以理论上监听的端口可以继续监听。但是当服务端出现大量 TIME_WAIT 时，系统资源被占满时，会导致处理不过来新的连接。
++ **TIME_WAIT 过多的原因，有什么危害以及解决方法?**
+
+  +  原因：
+    
+    +  短时间内出现过多的TCP链接释放
+    
+  + 危害：
+
+    +  客户端TIME_WAIT过多，就会导致端口资源被占用，被占满就会导致无法创建新的连接。
+    +  服务端只监听一个端口，但是会把连接扔给处理线程，所以理论上监听的端口可以继续监听。但是当服务端出现大量 TIME_WAIT 时，系统资源被占满时，会导致处理不过来新的连接。
+
+  +  处理方法：
+
+     +  调整系统内核参数：
+
+        +   修改系统默认的 TIMEOUT 时间 tcp_fin_timeout
+        +  减少保持TIME_WAIT套接字的最大数量 tcp_max_tw_buckets
+        +  增加可用端口范围
+
+     +  调整短链接为长链接
+
+        +  短连接：连接->传输数据->关闭连接
+
+           > 短连接是指SOCKET连接后发送后接收完数据后马上断开连接。
+
+        +  长链接：连接->传输数据->保持连接 -> 传输数据-> ... ->关闭连接
+
+           > 长连接指建立SOCKET连接后不管是否使用都保持连接，但安全性较差。
+
+---
+
++   **服务器出现大量close_wait的连接的原因是什么?有什么解决方法?**
+
+  + 原因:
+
+    + 服务器内部业务处理占用了过多时间，都没能处理完；或者还有数据需要发送；或者服务器的业务逻辑有问题，没有执行close()方法 
+    + 服务器的父进程派生出子进程，子进程继承了socket，收到FIN的时候子进程处理但父进程没有处理该信号，导致socket的引用不为0无法回收
+
+  + 危害：socket资源会被耗尽
+
+  + 处理方法: 
+
+    + 停止应用程序
+
+    + 修改程序里的bug
 
 ---
 
@@ -506,15 +872,80 @@
 
 ---
 
-### 3.HTTP层
+### 3.应用层
 
 + HTTP和HTTPS有哪些不同的地方呢？ARP协议的作用，哪些过程会使用这个协议呢？在一个广域网中，我如何利用该协议来找到目标主机的MAC地址并返回给源主机呢？(大概是这么问的吧，回答的时候我也说了一下IP协议)
 
-
-
 + HTTP状态码
 
+---
 
++  **应用层的功能是什么？**
+  + 应用进利用程相应的应用层协议来使用下层网络所提供的通信服务。
+
+---
+
++  **介绍一下域名解析系统 DNS**
+  + DNS 是一个分布式数据库，提供了主机名和 IP 地址之间相互转换的服务。DNS 可以使用 UDP 或 TCP 进行传输，端口号都为 53。多数情况使用 UDP ，所以域名解析器和域名服务器必须自己处理超时和重传来保证可靠性。使用TCP 情况：
+    + 如果返回的响应超过的 512 字节（UDP 最大只支持 512 字节的数据）。
+    + 区域传送（区域传送是主域名服务器向辅助域名服务器传送变化的那部分数据）。
+
+---
+
++ **介绍一下域名解析系统的工作方式：**
+  +  主机向本地域名服务器的查询一般都是采用递归查询。向上递归，查完后返回
+  + 本地域名服务器向根域名服务器的查询的迭代查询。每次询问完都给反馈
+    1. 输入域名后，浏览器先检查缓存中是否有域名映射的ip地址，有解析结束。
+    2. 若无，则检查操作系统缓存(如Windows的hosts)中有无解析过的结果，有解析结束。
+    3. 若无，则查找本地DNS解析器缓存，有解析结束。
+    4. 若无，首先找本地DNS服务器，查询到相对应的IP地址映射或者缓存信息则结束。
+    5. 若无，则根据本地DNS服务器设置的转发器进行查询：
+       + 未用转发模式：
+         + 本地DNS就把请求发至根DNS进行迭代查询，根DNS服务器收到请求后会判断域名(.com)由谁授权管理，返回负责该顶级域名服务器的一个IP。
+         + 本地DNS服务器收到IP后，联系负责.com域的服务器，若无法解析，它会找下一级DNS服务器地址给本地DNS服务器。本地DNS服务器收到地址就找域名域服务器，重复上面动作，直至找到域名对应的主机
+       + 使用转发模式：
+         + 本地DNS服务器把请求转发至上一级DNS服务器，让它进行解析，若不能解析，把请求转至上上级，以此循环，直至找到，然后原路回来。最后把结果返回给本地DNS服务器，DNS服务器再返回给客户机
+
+---
+
++  **为什么域名解析基本上使用 UDP 协议？**
+  + 因为UDP快! UDP的DNS协议只要一个请求、一个应答就好了。TCP需要三次握手建立连接
+  + 但UDP 最大只支持 512 字节的数据，如果数据超过则使用TCP
+
+---
+
++  **为什么区域传送使用 TCP 协议？**
+  + 因为TCP协议可靠性好。从主DNS上复制内容需要进行可靠传输，而且UDP有大小限制，最大只支持 512 字节的数据。万一同步的数据大于512字节就无法使用UDP了。
+
+---
+
++  **介绍一下DNS的负载均衡策略**
+  + 一个网站有大量用户请求，请求的资源位于同一台机器，这台机器随时可能会蹦。处理办法就是DNS负载均衡技术
+  + 原理是在DNS服务器中为同一个主机名配置多个IP地址，在应答DNS查询时，DNS服务器对每个查询 **将以DNS文件中主机记录的IP地址按顺序返回不同的解析结果** ，将客户端的访问引导到不同的机器上去，使得不同的客户端访问不同的服务器，达到负载均衡的目的。
+
+---
+
++  **介绍一下动态主机配置协议DHCP**
+  + 提供了即插即用的连网方式，让DHCP服务器自动分配IP 地址等信息，不再需要用户手动配置 。
+    1. 客户端发送 Discover 报文，目的地址为 255.255.255.255:67，源地址为 0.0.0.0:68，被放入 UDP 中，该报文被广播到同一个子网的所有主机上。
+    2. DHCP 服务器收到 Discover 报文之后，发送 Offer 报文给客户端，该报文包含了客户端所需要的信息
+    3. 客户端选择了某个 DHCP 服务器提供的信息，那就发送 Request 报文给该 DHCP 服务器。
+    4. HCP 服务器发送 Ack 报文，表示客户端此时可以使用提供给它的信息。
+
+---
+
++  **应用层中分别基于TCP，UDP的协议**
+
+  + TCP：
+    + FTP：定义了文件传输协议，使用21端口. 
+    + Telnet：它是一种用于远程登陆的端口,23端口 
+    + SMTP：定义了简单邮件传送协议，服务器开放的是25号端口。 
+    + POP3：它是和SMTP对应，POP3用于接收邮件。
+
+  + UDP：
+    + DNS：用于域名解析服务，用的是53号端口 
+    + SNMP：简单网络管理协议，使用161号端口
+    + TFTP(Trival File Transfer Protocal)：简单文件传输协议，69
 
 ---
 
@@ -551,43 +982,157 @@
 
 ---
 
-## 操作系统
++  **简单介绍一下HTTP协议**
+  + 超文本传输协议HTTP是一个简单的请求—响应协议，运行在TCP之上，指定了客户端可能发送给服务器端的消息类型与响应类型，请求和响应消息以ASCII形式给出；而消息内容则具有一个类似MIME的格式。
 
-### Linux 命令
+---
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+---
+
+## 七.操作系统
+
+### 1.Linux 命令
 
 + linux 中查看监听网络端口命令，more和cat的区别
 
-
-
 + linux 改密码命令 改权限命令
 
- 
-
-+  如何结束一个进程， -9 是什么含义
-
-
++  如何结束一个进程， -9 是什么含义、
 
 + ps的底层实现(我按照自己的理解，讲了一下PCB的机制，然后说大概是扫描了一下PCB的[链表](https://www.nowcoder.com/jump/super-jump/word?word=链表)，面试官好像挺满意的)。
 
 + 对于大文件，为什么CP比MV慢很多
 + 如果rm以及rm -f一个正在被使用的文件，会发生什么
 
-### 进程与线程
+### 2.进程与线程
 
 + 两个进程会存放在相同的内存地址吗？讲几种进程调度的算法？进程的状态有哪几种？哪些操作会使进程从用户态到内核态呢？
-
 + Linux进程地址空间分布
 + Linux内存管理方法，页面置换[算法](https://www.nowcoder.com/jump/super-jump/word?word=算法)，逻辑地址和物理地址的转换
-+ 解释孤儿进程，僵死进程，惊群效应
 + 生产-消费者模型，伪代码，用条件变量，注意使用while()替代if()判断是否满足条件
 + C++20里的协程，所以又问了我协程相关的东西，包括内核线程和用户态线程之类的。
 + 为什么要区分内核和用户态
 + linux怎么管理进程内存？
 + 怎么快速定位linux下占用资源很大的程序单元
 +  哪些时候会发生上下文切换，上下文切换过程中经历了什么
-+ 如果父进程没有调用wait、waitpid，怎么杀死僵尸进程
 
-### 死锁
+---
+
++  **进程，线程和协程的区别和联系**
+  + 定义：
+    + 进程： 进程是在内存中运行着的程序，是资源分配和拥有的基本单位
+    + 线程：线程是轻量级的进程，是最小的执行单位
+    + 协程：用户态的轻量级线程，线程内部调度的基本单位
+  + 区别：
+    1. **切换情况：**
+       + 进程：进程CPU环境的保存以及 新调度的进程CPU环境的设置 ；涉及栈、寄存器、页表和文件句柄等
+       + 线程：保存和设置程序计数器，少量寄存器和栈的内容
+       + 协程：先将寄存器上下文和栈保存，等切换回来的时候再进行恢复
+    2. **切换者**
+       + 进程：操作系统
+       + 线程：操作系统
+       + 协程：用户
+    3. **切换过程**
+       + 进程：用户态—>内核态—>用户态
+       + 线程：用户态—>内核态—>用户态
+       + 协程：只有用户态
+    4. **调用栈**
+       + 进程：内核栈
+       + 线程：内核栈
+       + 协程：用户栈
+    5. **拥有资源**
+       + 进程：CPU资源，内存资源，文件资源，句柄等
+       + 线程：程序计数器，寄存器，栈等
+       + 协程：自己的寄存器上下文和栈
+    6. **系统开销**
+       + 进程：切换涉及到虚拟地址空间，内核栈与硬件上下文，开销较大
+       + 线程：切换时只需保存和设置少量的寄存器内容，开销较小
+       + 协程：直接操作栈则基本没有内核切换的开销，可以不加锁访问全局变量，所以上下文切换非常快
+    7. **通信方面**
+       + 进程：需要借助操作系统内核
+       + 线程：线程间通信只需直接读写进程数据段，如全局变量来进行通信
+       + 协程：共享内存，消息队列等
+
+---
+
++   **线程与进程的比较**
+  +  进程： 进程是在内存中运行着的程序，是资源分配和拥有的基本单位
+  +  线程：线程是轻量级的进程，是最小的执行单位
+  +  对比：
+     +  线程启动速度快，轻量级
+     +  线程的系统开销小
+     +  线程使用有一定难度，需要处理数据一致性问题 
+     +  同一线程共享的有堆、全局变量、静态变量、指针，引用、文件等，而独自占有栈
+
+---
+
++   **介绍一下进程控制块PCB，及其中的内容**
+  + 每个进程在内核中都有一个进程控制块(PCB)来维护进程相关的信息，Linux内核的进程控制块是 task_struct结构体。
+  + **PCB**内部重要成员
+    1. 进程标识符
+    2. 进程当前状态
+    3. 进程优先级
+    4. 进程资源清单
+    5. 进程相应的程序和数据地址，以便把PCB与其程序和数据联系起来。
+    6. 进程同步与通信机制等等
+
+---
+
++  **你知道哪些进程？**
+
+  + 孤儿进程：
+
+    + 父进程已经终止的进程**,**它们的父进程都改变为**init**进程。这些进程自身变成孤儿进程，被init进程收养。
+
+    > 由init进程收养的进程终止时不会成为僵尸进程。init被编写成无论何时只要有一个子进程终止，init就会调用 一个wait函数取得其终止状态。
+
+  + 僵尸进程：
+
+    + 一个已经终止、但是其父进程尚未对其进行善后处理(获取终止子进程的有关信息、释放它仍占用的资源)的进程被称为僵死进程(zombie)，终止进程的残留资源(PCB)存放于内核中
+
+    > 特别注意，僵尸进程是不能使用kill命令清除掉的。因为kill命令只是用来终止进程的，而僵尸进程已经终止。
+    >
+    > + 如果父进程没有调用wait、waitpid，怎么杀死僵尸进程
+    >   + 查看进程：ps -ef | grep defunct ： 1 running, 94 sleeping, 0 stopped, **0 zombie**
+    >   + 一般僵尸进程很难直接kill掉，可以kill僵尸父进程。父进程死后，僵尸进程成为”孤儿进程”，过继给1号进程init，init始终会负责清理僵尸进程．它产生的所有僵尸进程也跟着消失。
+    >   + ps -e -o ppid,stat | grep Z | cut -d " " -f2 | xargs kill -9
+
+  + 守护进程：
+
+    + 是 Linux 的一种⻓期运行的后台服务进程 ，也称「精灵进程」。常⻅的 httpd、 named、sshd 等服务都是以守护进程 Daemon 方式运行的
+
+---
+
++  **什么是惊群效应**
+  + 惊群现象就是多进程（多线程）在同时阻塞等待同一个事件的时候（休眠状态），当等待的事件发生，它会唤醒等待的所有进程（或者线程），但是最终却只可能有一个进程（线程）获得这个事件的“控制权”，其他进程（线程）获取失败，只能重新进入休眠状态，这种现象和性能浪费就叫做惊群。
+  + 现象的影响：
+    + 这种效应使得系统对用户进程/线程频繁地做无效的调度，上下文切换，系统性能大打折扣。
+    + 而且为了确保只有一个线程得到资源，用户必须对资源操作进行加锁保护，进一步加大了系统开销。
+  + 例子：
+    + Linux 2.6 之前。 主进程创建了socket、bind、listen之后，fork() 出来多个进程，每个子进程都开始循环处理（accept）这个listen_fd。 每个进程都阻塞在accept上，当一个新的连接到来时候，所有的进程都会被唤醒，但是其中只有一个进程会接受成功，其余皆失败，重新休眠。
+    + Linux 2.6 之后的版本，Linux内核已经解决了accept（）函数的“惊群”现象，大概的处理方式就是，当内核接收到一个客户连接后，只会唤醒等待队列上的第一个进程（线程），所以如果服务器采用accept阻塞调用方式，在最新的linux系统中已经没有“惊群效应”了
+
+---
+
+### 3.死锁
 
 + 死锁的四个必要条件
 
@@ -599,7 +1144,7 @@
 
 ---
 
-## 数据库
+## 八.数据库
 
 
 
@@ -638,23 +1183,9 @@
 
 ---
 
-## 调试
-
-### gdb
 
 
-
-
-
-
-
-## 链接与编译
-
-
-
-
-
-## 网络编程相关
+## 九.网络编程相关
 
 + 讲讲非阻塞socket
 + 文件读经历了哪些过程
@@ -677,9 +1208,10 @@
   - 服务端调用 close ，表示连接关闭。
 
 -  **服务器端会维护哪两个队列？** 
+  
   - 未完成连接队列(SYN 队列):接收到一个 SYN 建立连接请求，处于 SYN_RCVD 状态; 
   - 已完成连接队列(Accpet 队列):已完成 TCP 三次握手过程，处于 ESTABLISHED 状态;
-
+  
 -  **服务器端进行TCP连接(socket连接)时，内核的工作流程**
   - 当客户端发送的SYN请求报文到达后，插入到SYN 队列，随后给对方发送ACK确认报文
   - 当接收到客户端的ACK确认报文后，应用程序从Accpet 队列中取出已完成连接的socket
@@ -1025,12 +1557,71 @@
 
 + Libevent如何处理IO事件，信号事件，和定时事件
 
-  
 
-## WebServer项目相关
+
+
+
+
+
+
+---
+
+## 十一.Redis 
+
+
+
+
+
+
+
+
+
+---
+
+## 十二.WebServer项目相关
 
 +  **介绍一下你的WebServer项目**
   + 这是一个服务器项目
+
+---
+
++  **介绍一下服务器程序中的事件处理模式**
+  + 简单介绍：
+    + Reactor模式：利用I/O复用，让主线程调用 epoll_wait 等待 socket 上有数据可读与可写。当epoll_wait 通知主线程后，主线程将 socket 事件放入请求队列，唤醒的线程来处理数据的读写与后续的业务逻辑
+    + Proactor模式：利用 异步I/O aio_read 与 aio_write 让内核来进行 socket 的读写操作，等操作完成后内核通知主线程，主线程将唤醒工作线程来处理后续的业务逻辑与事件注册
+    + 同步IO模拟Proactor模式： 主线程调用 epoll_wait 等待 socket 上有数据可读与可写。当epoll_wait 通知主线程后，主线程将数据读完之后封装成请求队列中的元素，唤醒工作线程完成后续的逻辑业务与事件注册。
+  + **Reactor模式**
+    + 要求主线程 (I/O处理单元) 只负责监听文件描述上是否有事件发生，有则立即将该事件通知工作线程(逻辑单元)，将socket可读可写事件放入请求队列，交给工作线程处理。除此之外，工作线程不做任何实质性的工作。读写数据，连接新的连接，处理客户请求接在工作线程完成。
+    + 使用同步 I/O 模型实现的工作流程：
+      1. 主线程 在epoll 内核事件表中注册 socket 的读就绪事件
+      2. 主线程调用 epoll_wait 等待 socket 上有数据可读
+      3. 有数据可读时，epoll_wait 通知主线程，主线程将 socket 可读事件放入请求队列
+      4. 睡眠在请求队列中的某个工作线程被唤醒，它从socket 读取数据，并处理客户请求，然后往 epoll 事件表中注册 socket 上的写就绪事件
+      5. 主线程调用 epoll_wait 等待 socket 可写
+      6. socket 可写时， epoll_wait 通知主线程，主线程将 socket 可写事件放入请求队列
+      7. 睡眠在请求队列中的某个工作线程被唤醒，它往 socket 上写入服务器处理客户请求的结果
+  +  **Proactor模式：**
+    + 将所有I/O操作都交给主线程和内核处理(读写)，工作线程只负责业务逻辑。
+    + 使用异步I/O模型实现的工作流程：
+      1. 主线程调用 aio_read 函数向内核注册 socket 上的读完成事件，并告诉内核 用户读缓冲区的位置，以及读操作完成时如何通知应用程序，可用信号
+      2. 主线程继续处理其他逻辑
+      3. 当 socket 上的数据被读入用户缓冲区后，内核将向应用程序发送信号，通知数据可用
+      4. 应用程序预先定义的信号处理函数选择一个工作线程来处理客户请求。处理完成之后调用 aio_write 函数向内核注册 socket 上的写完成事件，并告诉内核 用户写缓冲区的位置，以及写操作完成时如何通知应用程序
+      5. 主线程继续处理其他逻辑
+      6. 当用户缓冲区数据写入 socket 后，内核将向应用程序发送信号，通知数据已发送
+      7. 应用程序预先定义的信号处理函数选择一个工作线程做善后工作，比如是否关闭socket
+  +  **同步I/O模拟Proactor模式：**
+    + 主线程执行数据读写操作，完成之后主线程向工作线程通知这一"完成事件"。从工作线程的角度看，它们只需对读写的结果进行逻辑处理。
+    + 使用同步 I/O 模型模拟出Proactor模式的工作流程如下：
+      1. 主线程 在epoll 内核事件表中注册 socket 的读就绪事件
+      2. 主线程调用 epoll_wait 等待 socket 上有数据可读
+      3. 有数据可读时，epoll_wait 通知主线程，主线程从 socket 中循环读完数据，将数据封装成一个请求对象放入请求队列
+      4. 睡眠在请求队列中的某个工作线程被唤醒，它获得请求对象并处理客户请求，然后往 epoll 事件表中注册 socket 上的写就绪事件
+      5. 主线程调用 epoll_wait 等待 socket 可写
+      6. socket 可写时， epoll_wait 通知主线程，主线程往 socket 上写入服务器处理客户请求的结果
+
+---
+
 +  **线程池的优点是什么？**
   + 线程池旨在降低创建和销毁线程的频率，使其维持合理数量的线程，并让空闲的线程重新承担新的任务 。
   + 连接池是指维持连接的缓存池，尽量重用已有的连接，降低创建和关闭连接的频率。
@@ -1038,6 +1629,18 @@
 
 + 项目里实现了哪些HTTP请求呢，处理的时候如何分辨这些请求呢？
 + 设想这样一种场景，我的web服务器里面有一张表格，现在浏览器需要请求这个表格中 id=张三 的内容，同时返回到浏览器也需要以表格的形式展现。
+
+---
+
+## 十三.智力题
+
+
+
+
+
+
+
+
 
 ---
 
