--- a/秋招经历/面经.md
+++ b/秋招经历/面经.md
@@ -153,7 +153,7 @@
 
 + 手写string类
 
-
++ 手写
 
 
 
@@ -431,7 +431,7 @@
 
 
 
-### 2.TCP层
+### 2.传输层
 
 +  **是什么是TCP 粘包/拆包 ？ 发生的原因？**
 
@@ -760,6 +760,18 @@
 
 ---
 
++  **可以解释一下 ** **RTO** **，** **RTT** **和超时重传分别是什么吗?**
+  + 超时重传： 发送端发送报文后若长时间未收到确认的报文则需要重发该报文。可能有以下几种情况:
+    + 发送的数据没能到达接收端，所以对方没有响应。 
+    + 接收端接收到数据，但是ACK报文在返回过程中丢失。 
+    + 接收端拒绝或丢弃数据。
+  + RTO：从上一次发送数据，因为长期没有收到ACK响应，到下一次重发之间的时间。就是重传间隔。
+    + 通常每次重传RTO是前一次重传间隔的两倍，计量单位通常是RTT。例:1RTT，2RTT，4RTT， 8RTT......
+       重传次数到达上限之后停止重传。
+  + RTT：数据从发送到接收到对方响应之间的时间间隔，即数据报在网络中一个往返用时。大小不稳定。
+
+---
+
 + **TIME_WAIT 过多的原因，有什么危害以及解决方法?**
 
   +  原因：
@@ -949,8 +961,229 @@
 
 ---
 
++ **简单介绍一下HTTP协议**
+  + 超文本传输协议HTTP是一个简单的请求—响应协议，运行在TCP之上，指定了客户端可能发送给服务器端的消息类型与响应类型，请求和响应消息以ASCII形式给出；而消息内容则具有一个类似MIME的格式。 
+
+---
+
++  **介绍一下 HTTP 请求报文与响应报文**
+
+  + 客户端发送请求报文给服务器，服务器进行处理请求报文中的信息，并将处理结果放入响应报文中返回给客户端。
+
+  + 请求报文结构：
+
+    + 第一行是包含了请求方法、URL、协议版本；
+    + 接下来的多行都是请求首部 Header，每个首部是以 首部名称: 值 来显示。
+    + 一个空行用来分隔首部和内容主体 Body
+    + 最后是请求的内容主体
+
+    ```http
+    GET http://www.example.com/ HTTP/1.1
+    Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.9
+    Accept-Encoding: gzip, deflate
+    Accept-Language: zh-CN,zh;q=0.9,en;q=0.8
+    Cache-Control: max-age=0
+    Host: www.example.com
+    If-Modified-Since: Thu, 17 Oct 2019 07:18:26 GMT
+    If-None-Match: "3147526947+gzip"
+    Proxy-Connection: keep-alive
+    Upgrade-Insecure-Requests: 1
+    User-Agent: Mozilla/5.0 xxx
+    
+    param1=1&param2=2
+    ```
+
+  + 响应报文结构：
+
+    + 第一行包含 协议版本、状态码以及描述
+    + 接下来多行也是首部内容
+    + 一个空行分隔首部和内容主体
+    + 最后是响应的内容主体
+
+    ```http
+    HTTP/1.1 200 OK
+    Age: 529651
+    Cache-Control: max-age=604800
+    Connection: keep-alive
+    Content-Encoding: gzip
+    Content-Length: 648
+    Content-Type: text/html; charset=UTF-8
+    Date: Mon, 02 Nov 2020 17:53:39 GMT
+    Etag: "3147526947+ident+gzip"
+    Expires: Mon, 09 Nov 2020 17:53:39 GMT
+    Keep-Alive: timeout=4
+    Last-Modified: Thu, 17 Oct 2019 07:18:26 GMT
+    Proxy-Connection: keep-alive
+    Server: ECS (sjc/16DF)
+    Vary: Accept-Encoding
+    X-Cache: HIT
+    
+    <!doctype html>
+    <html>
+    <head>
+        <title>Example Domain</title>
+    	// 省略... 
+    </body>
+    </html>
+    ```
+
+---
+
++  **介绍一下URL？**
+
+  + http 使用 URL（ **U**niform **R**esource **L**ocator，统一资源定位符）来定位资源，是 URI（**U**niform **R**esource **I**dentifier，统一资源标识符）的一个子集，URL 在 URI 的基础上增加了定位能力。
+
+    > URI 还包含 URN（Uniform Resource Name，统一资源名称），它知识用来定义一个资源的名称，并不具备定位该资源的能力。
+
+---
+
++  **介绍一下HTTP请求行中有哪些方法？**
+  + HTTP1.0 定义了三种请求方法: GET, POST 和 HEAD方法。
+  +  HTTP1.1 新增了六种请求方法:OPTIONS、PUT、PATCH、DELETE、TRACE 和 CONNECT 方法。
+    1. GET：请求指定的页面信息，并返回实体主体。
+    2. HEAD：获取报文首部。不返回报文实体主体部分。主要用于确认 URL 的有效性以及资源更新的日期时间等。
+    3. POST：向指定资源提交数据进行处理请求。数据被包含在请求体中。
+    4. PUT：上传文件，但存在安全性问题，一般不使用该方法。
+    5. DELETE：请求服务器删除指定的页面。
+    6. CONNECT：HTTP/1.1 协议中预留给能够将连接改为管道方式的代理服务器。
+    7. OPTIONS：允许客户端查看服务器的性能。
+    8. TRACE：回显服务器收到的请求，主要用于测试或诊断。
+    9. PATCH：是对 PUT 方法的补充，用来对已知资源进行局部更新 。
+
+---
+
++  **GET与POST的区别是什么？**
+
+  1. get是获取数据，post是修改数据
+
+  2. get把请求的数据放在url上， 以分割URL和传输数据，参数之间以&相连，所以get不太安全。而post把数据放在HTTP的包体内(requrest body)
+
+  3. get提交的数据最大是2k( 限制实际上取决于浏览器)， post理论上没有限制。
+
+  4. GET产生一个TCP数据包，浏览器会把http header和data一并发送出去，服务器响应200(返回数据)； POST产生两个TCP数据包，浏览器先发送header，服务器响应100 continue，浏览器再发送data，服务器响应200 ok(返回数据)。
+
+  5. GET请求会被浏览器主动缓存，而POST不会，除非手动设置。
+
+  6. 本质区别:GET是幂等的，而POST不是幂等的
+
+     > + 这里的幂等性：幂等性是指一次和多次请求某一个资源应该具有同样的副作用。简单来说意味着对同一URL的多个请求应该返回同样的结果。
+     >
+     > + 因为get 请求是幂等的，在网络不好的隧道中会尝试重试。如果用get请求增数据，会有重复操作的风险
+
+---
+
++  **POST 方法比 GET 方法安全?**
+  + 有人说POST 比 GET 安全，因为数据在地址栏上不可见。然而，从传输的角度来说，他们都是不安全的，因为 HTTP 在网络上是明文传输的，只要在网络节点上捉包，就能完整地获取数据报文。
+  + 要想安全传输，就只有加密，也就是 HTTPS。
+
+---
+
++  **GET** **与** **POST** **传递数据的最大长度能够达到多少呢?**
+  + 很多文章都说GET方式提交的数据最多只能是1024字节，而实际上 HTTP 协议规范没有对URL长度进行限制
+    + 限制是特定的浏览器及服务器对它的限制，比如IE对URL长度的限制是2083字节(2K+35字节）
+    + 浏览器无限制时，这时限制服务器的操作系统，若url太长，服务器可能会因为安全方面的设置从而拒绝请求或者发生不完整的数据请求。
+  + post 理论上讲是没有大小限制的，HTTP协议规范也没有进行大小限制，但实际上post所能传递的数据量 大小取决于服务器的设置和内存大小
+
+---
+
++  **POST** **方法会产生两个** **TCP** **数据包?你了解吗?**
+  + POST 会将 header 和 body 分开发送，先发送 header，服务端返回 100 状态码再发送 body。
+  + HTTP 协议中没有明确说明 POST 会产生两个 TCP 数据包，而且实际测试(Chrome)发现，header 和 body 不会分开发送。
+  + 所以，header 和 body 分开发送是部分浏览器或框架的请求方法，不属于 post 必然行为。
+
+---
+
++  **介绍一下 HTTP 的状态码有哪些？**
+  + 1XX：信息
+    + **100 Continue** ：表明到目前为止都很正常，客户端可以继续发送请求或者忽略这个响应。
+  + 2XX：成功
+    + **200 OK**
+    + **204 No Content** ：请求已经成功处理，返回的响应报文不包含实体的主体部分。
+  + 3XX：重定向
+    + **301 Moved Permanently** ：永久性重定向
+    + **302 Found** ：临时性重定向
+    + **303 See Other** ：和 302 有着相同的功能，但采用 GET 方法获取资源
+    + **304 Not Modified** ： 如果不满足请求行中的条件就返回这个
+  + 4XX：客户端错误
+    + **400 Bad Request** ：请求报文中存在语法错误。
+    + **401 Unauthorized** ：该状态码表示发送的请求需要有认证信息（BASIC 认证、DIGEST 认证）。如果之前已进行过一次请求，则表示用户认证失败。
+    + **403 Forbidden** ：请求被拒绝。
+    + **404 Not Found**
+  + 5XX：服务器端错误
+    + **500 Internal Server Error** ：服务器正在执行请求时发生错误。
+    + **503 Service Unavailable** ：服务器暂时处于超负载或正在进行停机维护，现在无法处理请求
+
+---
+
++  **HTTP 有哪些首部字段？**
+  + 通用首部字段、请求首部字段、响应首部字段和实体首部字段。
+  + 具体见[HTTP 首部字段](https://github.com/ZYBO-o/Skill-Accumulation/blob/main/%E8%AE%A1%E7%AE%97%E6%9C%BA%E7%BD%91%E7%BB%9C/%E8%AE%A1%E7%AE%97%E6%9C%BA%E7%BD%91%E7%BB%9C-HTTP%E4%B8%8E%E7%BD%91%E7%BB%9C%E5%AE%89%E5%85%A8.md#%E9%80%9A%E7%94%A8%E9%A6%96%E9%83%A8%E5%AD%97%E6%AE%B5)
+
+---
+
++  **HTTP长连接和短连接的区别**
+  + 在HTTP/1.0中默认使用短连接。也就是说，客户端和服务器每进行一次HTTP操作，就建立一次连接， 任务结束就中断连接。
+  + 在HTTP/1.1起，默认使用长连接，用以保持连接特性。
+
+---
+
++  **为什么服务器会缓存这一项功能?如何实现的?**
+  + 原因：
+    + 缓解服务器压力;
+    + 降低客户端获取资源的延迟：缓存通常位于内存中，读取缓存的速度更快。并且缓存服务器在地理位置上也有可能比源服务器来得近，例如浏览器缓存。
+  + 实现：
+    + 让代理服务器进行缓存
+    +  让客户端浏览器进行缓存
+
+---
+
++  **一个TCP连接可以对应几个HTTP请求?**
+  + 如果维持连接，一个 TCP 连接是可以发送多个 HTTP 请求的。
+
+---
+
++  **一个TCP 连接中 HTTP 请求发送可以一起发送么(比如一起发三个 请求，再三个响应一起接收)?**
+
+  + HTTP/1.1 中单个 TCP 连接在同一时刻只能处理一个请求，任意两个 HTTP 请求从开始到结束的时间在同一个 TCP 连接里不能重叠。
+
+    >  HTTP/1.1 存在 Pipelining 技术可以完成这个多个请求同时发送，但是由于浏览器默认关闭，所以可以认为这是不可行的.
+
+  + 在 HTTP/1.1 时代，浏览器是如何提高页面加载效率的呢?
+
+    + 维持和服务器已经建立的 TCP 连接，在同一连接上顺序处理多个请求。
+    + 和服务器建立多个 TCP 连接。
+
+  + HTTP2 中由于 Multiplexing 特点的存在，多个 HTTP 请求可以在同一个 TCP 连 接中并行进行。
+
+---
+
++  **浏览器对同一 Host 建立TCP连接到的数量有没有限制?**
+  + 有。Chrome 最多允许对同一个 Host 建立六个 TCP 连接。不同的浏览器有一些区别。
+  + 如果资源是 HTTPS 连接并且在同一个域名下，那么浏览器在 SSL 握手之后会和服务器商量能不能用 HTTP2，如果能的话就使用 Multiplexing 功能在这个连接上进行多路传输。
+  + 如果都不能用，浏览器就会在一个 HOST 上建立多个 TCP 连接，连接数量的最大限制取决于浏览器设置
+
+---
+
++  **浏览器在与服务器建立了一个** **TCP** **连接后是否会在一个** **HTTP** **请求完成后断开?什么情况下会断开?**
+  + 在 HTTP/1.0 中，一个服务器在发送完一个 HTTP 响应后，会断开链接。这样开销代价过大。
+  + HTTP/1.1 把 Connection 头写进标准，并且默认开启持久连接，除非请求中写明 Connection: close，那么浏览器和服务器之间是会维持一段时间的 TCP 连接，当请求报头中声明 Connection: close 才会在请求完成后关闭连接
+
+---
+
++  **在浏览器中输入url地址后显示主页的过程?**
+  1. 根据域名，进行DNS域名解析; 
+  2. 拿到解析的IP地址，建立TCP连接; 
+  3. 向IP地址，发送HTTP请求; 
+  4. 服务器处理请求;
+  5. 返回响应结果; 
+  6. 关闭TCP连接; 
+  7. 浏览器解析HTML; 
+  8. 浏览器布局渲染;
+
+---
+
 + **键入网址到网⻚显示，期间发生了什么?**
-  1. 查询**DNS**，获取域名对应的**IP**。
+  1. 查询**DNS**，获取域名对应的**IP**。 （DNS使用了UDP协议）
      + 检查本地hosts文件是否有这个网址的映射，如果有，就调用这个IP地址映射，解析完成。
      + 如果没有，则查找本地DNS解析器缓存
      + 如果没有，查找填写或分配的首选DNS服务器，称为本地DNS服务器。
@@ -969,6 +1202,231 @@
 
 ---
 
++  **HTTP中缓存的私有和共有字段?知道吗?**
+
+  + private 指令规定了将资源作为私有缓存，只能被单独用户使用，一般存储在用户浏览器中。
+
+    `Cache-Control: private`
+
+  + public 指令规定了将资源作为公共缓存，可以被多个用户使用，一般存储在代理服务器中
+
+    `Cache-Control: public`
+
+---
+
++  **HTTP** **中有个缓存机制，但如何保证缓存是最新的呢?(缓存过期机制)**
+
+  + max-age 指令出现在请求报文，并且缓存资源的缓存时间小于该指令指定的时间，那么就能接受该缓存。
+
+  + max-age 指令出现在响应报文，表示缓存资源在缓存服务器中保存的时间。
+
+    `Cache-Control: max-age=31536000`
+
+  + Expires 首部字段也可以用于告知缓存服务器该资源什么时候会过期。
+
+    `Expires: Wed, 04 Jul 2012 08:26:05 GMT`
+
+  + 在 HTTP/1.1 中，会优先处理 max-age 指令; 
+
+---
+
++  **HTTP** **如何禁用缓存?如何确认缓存?** 
+
+  + HTTP/1.1 通过 Cache-Control 首部字段来控制缓存。
+
+    + 禁用缓存： no-store 指令规定不能对请求或响应的任何一部分进行缓存
+
+      `Cache-Control: no-store`
+
+    + 确认缓存： no-cache 指令规定缓存服务器需要先向源服务器验证缓存资源的有效性，只有当缓存资源有效时才能使用该缓存对客户端的请求进行响应。
+
+      `Cache-Control: no-cache`
+
+---
+
++  **HTTP1.0和HTTP1.1的区别?**
+  +  **长连接** ：HTTP 1.1支持长连接（Persistent Connection）和请求的流水线（Pipelining）处理，在一个TCP连接上可以传送多个HTTP请求和响应，减少了建立和关闭连接的消耗和延迟，在HTTP1.1中默认开启`Connection： keep-alive`，一定程度上弥补了HTTP1.0每次请求都要创建连接的缺点。
+  +  **缓存处理**：在HTTP1.0中主要使用header里的If-Modified-Since,Expires来做为缓存判断的标准，HTTP1.1则引入了更多的缓存控制策略，可供选择的缓存头来控制缓存策略。
+  +  **带宽优化及网络连接的使用**：HTTP1.0中，存在一些浪费带宽的现象，例如[客户端]()只是需要某个对象的一部分，而服务器却将整个对象送过来了，并且不支持断点续传功能，HTTP1.1则在请求头引入了range头域，它允许只请求资源的某个部分，即返回码是206（Partial Content），这样就方便了开发者自由的选择以便于充分利用带宽和连接。
+  +  **错误通知的管理**：在HTTP1.1中新增了24个错误状态响应码，如409（Conflict）表示请求的资源与资源的当前状态发生冲突；410（Gone）表示服务器上的某个资源被永久性的删除。
+  +  **Host头处理**：在HTTP1.0中认为每台服务器都绑定一个唯一的IP地址，因此，请求消息中的URL并没有传递主机名（hostname）。但随着虚拟主机技术的发展，在一台物理服务器上可以存在多个虚拟主机（Multi-homed Web Servers），并且它们共享一个IP地址。HTTP1.1的请求消息和响应消息都应支持Host头域，且请求消息中如果没有Host头域会报告一个错误（400 Bad Request）。
+
+---
+
++   **HTTP1.1和 HTTP2.0的区别？**
+  +  **新的二进制格式**： HTTP1.1的解析是基于文本。基于文本协议的格式解析存在天然缺陷，文本的表现形式有多样性，要做到健壮性考虑的场景必然很多，二进制则不同，只认0和1的组合。基于这种考虑HTTP2.0的协议解析决定采用二进制格式，实现方便且健壮。
+  +  **多路复用**，即连接共享，即每一个request都是用作连接共享机制的。一个request对应一个id，这样一个连接上可以有多个request，每个连接的request可以随机的混杂在一起，接收方可以根据request的 id将request再归属到各自不同的服务端请求里面。
+  +  **头部压缩**，HTTP1.1的头部（header）带有大量信息，而且每次都要重复发送；HTTP2.0使用encoder来减少需要传输的header大小，通讯双方各自cache一份header fields表，既避免了重复header的传输，又减小了需要传输的大小。
+  +  **服务端推送**：服务器除了对最初请求的响应外，服务器还可以额外的向客户端推送资源，而无需客户端明确的请求。
+
+----
+
++  **什么是HTTPS，为什么需要HTTPS？**
+  + 原因：HTTP 有以下安全性问题：
+    - 使用明文进行通信，内容可能会被窃听；
+    - 不验证通信方的身份，通信方的身份有可能遭遇伪装；
+    - 无法证明报文的完整性，报文有可能遭篡改。
+  + HTTPS 并不是新协议，而是让 HTTP 先和 SSL（Secure Sockets Layer）通信，再由 SSL 和 TCP 通信，也就是说 HTTPS 使用了隧道进行通信。
+  + 通过使用 SSL，HTTPS 具有了加密（防窃听）、认证（防伪装）和完整性保护（防篡改）。
+
+---
+
++  **HTTPS 和 HTTP的区别**
+
+  + |              | HTTP               | HTTPS                                   |
+    | ------------ | ------------------ | --------------------------------------- |
+    | 端口         | 80                 | 443                                     |
+    | 安全性       | 无加密，安全性较差 | 有加密机制，安全性较高                  |
+    | 资源消耗     | 较少               | 由于加密处理，资源消耗更多              |
+    | 是否需要证书 | 不需要             | 需要                                    |
+    | 协议         | 运行在TCP协议之上  | 运行在SSL协议之上，SSL运行在TCP协议之上 |
+
+---
+
++  **什么是 SSL/TLS?**
+  + SSL代表安全套接字层。是用于加密和验证应用程序(如浏览器)和Web服务器之间发送的数据的协议。
+  + SSL/TLS协议的基本思路是采用公钥加密法，客户端先向服务器端索要公钥，然后用公钥加密信息，服务器收到密文后，用自己的私钥解密。
+  + SSL/TLS协议作用：认证用户和服务，加密数据，维护数据的完整性。
+
+---
+
++  **HTTPS是如何保证数据传输的安全，整体的流程是什么? (SSL是怎么工作保证安全的)**
+
+  1. 客户端向服务器端发起SSL连接请求;
+  2. 服务器把公钥发送给客户端，并且服务器端保存着唯一的私钥
+  3. 客户端用公钥对双方通信的对称秘钥进行加密，并发送给服务器端 
+  4. 服务器利用自己唯一的私钥对客户端发来的对称秘钥进行解密
+  5. 进行数据传输，服务器和客户端双方用公有的相同的对称秘钥对数据进行加密解密，保证在数据收发过程中的安全，即使第三方获得数据包，也无法对其进行加密，解密和篡改。
+
+  + 数字签名、摘要是证书防伪非常关键的武器。 
+    + “摘要”就是对传输的内容，通过hash算法计算出一段固定长度的串。
+    + 通过发送方的私钥对这段摘要进行加密，加密后得到的结果就是“数字签名”
+
+---
+
++  **为什么有的时候刷新页面不需要重新建立** **SSL** **连接?**
+  + TCP 连接有的时候会被浏览器和服务端维持一段时间，TCP 不需要重新建立，SSL 自然也会用之前的。
+
+---
+
++  **SSL 中的认证中的证书是什么?了解过吗**
+  + 通过使用 **证书** 来对通信方进行认证。
+  + 数字证书认证机构(CA，Certificate Authority)是客户端与服务器双方都可信赖的第三方机构。
+  + 服务器的运营人员向 CA 提出公开密钥的申请，CA 在判明提出申请者的身份之后，会对已申请的公开密钥做数字签名，然后分配这个已签名的公开密钥，并将该公开密钥放入公开密钥证书后绑定在一起。
+  + 进行 HTTPS 通信时，服务器会把证书发送给客户端。客户端取得其中的公开密钥之后，先使用数字签 名进行验证，如果验证通过，就可以开始通信了。
+
+---
+
++  **如何保证公钥不被篡改?**
+  + 将公钥放在数字证书中。只要证书是可信的，公钥就是可信的。
+  + 公钥加密计算量太大，如何减少耗用的时间?
+    + 每一次对话(session)，客户端和服务器端都生成一个"对话密钥"(session key)，用它来加密信息。"对话钥"是对称加密，所以运算速度非常快，而服务器公钥只用于加密"对话密钥"本身，这样就减少了加密运算的消耗时间。
+
+---
+
++  **非对称密钥加密你了解吗?优缺点?**
+  + 对称密钥加密(Symmetric-Key Encryption)，加密和解密使用同一密钥。
+    + 优点:运算速度快
+    + 缺点:无法安全地将密钥传输给通信方
+
+---
+
++  **非对称密钥加密你了解吗?优缺点?**
+  + 非对称密钥加密，又称公开密钥加密(Public-Key Encryption)，加密和解密使用不同的密钥。
+  + 公钥所有人都可以获得，发送方获得接收方的公钥之后，使用公钥进行加密**， **接收方接收后使用私钥解密。
+  + 非对称密钥除了用来加密，还可以用来进行签名。因为私钥无法被其他人获取，因此发送方使用其私钥进行签名，通信接收方使用发送方的公钥对签名进行解密，就能判断这个签名是否正确。
+    + 优点:可以更安全地将公开密钥传输给通信发送方;
+    + 缺点:运算速度慢
+
+---
+
++  **HTTPS 采用的加密方式有哪些?是对称还是非对称?**
+  + HTTPS 采用混合的加密机制
+    + 使用非对称密钥加密用于传输对称密钥来保证传输过程的安全性，之后使用对称密钥加密进行通信来保证通信过程的效率。
+    + 确保传输安全过程(其实就是rsa原理):
+      1. Client给出协议版本号、一个客户端生成的随机数(Client random)，以及客户端支持的加密方法。
+      2. Server确认双方使用的加密方法，并给出数字证书、以及一个服务器生成的随机数(Server random)。
+      3. Client确认数字证书有效，然后生成呀一个新的随机数(Premaster secret)，并使用数字证书中的公钥，加密这个随机数，发给Server。
+      4. Server使用自己的私钥，获取Client发来的随机数(Premaster secret)。
+      5. Client和Server根据约定的加密方法，使用前面的三个随机数，生成”对话密钥”(session key)，用来加密接下来的整个对话过程。
+
+---
+
++  **Cookie是什么？**
+  + 引入原因：
+    + HTTP 协议是无状态的，主要是为了让 HTTP 协议尽可能简单，使得它能够处理大量事务。HTTP/1.1 引入 Cookie 来保存状态信息。
+  + 是什么：
+    + Cookie 是服务器发送到用户浏览器并保存在本地的一小块数据，在浏览器之后向同一服务器再次发起请求时被携带上，告知服务端两个请求是否来自同一浏览器。由于请求携带 Cookie 数据，因此会带来额外的性能开销
+    + Cookie 曾用于客户端数据的存储，因为当时没有其它合适的存储办法，随着现代浏览器开始支持各种各样的存储方式，Cookie 渐渐被淘汰。新的浏览器 API 已经允许开发者直接将数据存储到本地，如使用 Web storage API（本地存储和会话存储）或 IndexedDB。
+
+---
+
++  **Cookie有什么作用/用途？**
+  + 话状态管理(如用户登录状态、购物车、游戏分数或其它需要记录的信息)
+  +  个性化设置(如用户自定义设置、主题等)
+  + 浏览器行为跟踪(如跟踪分析用户行为等)
+
+---
+
++  **Session是什么？**
+  + 除了可以将用户信息通过 Cookie 存储在用户浏览器，也可以利用 Session 存储在服务器端，这样更加安全。
+  + Session 可以存储在服务器上的文件、数据库或内存中。也可以存储在 Redis 这种内存型数据库中，效率会更高。
+
+---
+
++  **使用 Session 维护用户登录状态的过程是怎么？**
+
+  1. 用户进行登录时，提交包含用户名，密码的表单，放入 HTTP 请求报文中；
+  2. 服务器验证用户名和密码，如果正确则把用户信息存储到 Redis 中，它在 Redis 中的 Key 称为 Session ID；
+  3. 服务器返回的响应报文的 Set-Cookie 首部字段包含了这个 Session ID，客户端收到响应报文后将该 Cookie 值存入浏览器中；
+  4. 客户端之后对同一个服务器进行请求时会包含该 Cookie 值，服务器收到之后提取出 Session ID，从 Redis 中取出用户信息，继续之前的业务操作。
+
+  >  注意： Session ID 的安全性问题，不能让它被恶意攻击者轻易获取，那么就不能产生一个容易被猜 到的 Session ID 值。此外，还需要经常重新生成 Session ID。在对安全性要求极高的场景下，例如 转账等操作，除了使用 Session 管理用户状态之外，还需要对用户进行重新验证，比如重新输入密 码，或者使用短信验证码等方式。
+
+---
+
++  **Session 的工作原理是什么？**
+  + 工作原理是客户端登录完成之后，服务器会创建对应的 session，创建完之后，会把 session 的 id 发送给客户端
+  + 客户端再存储到浏览器中。这样客户端每次访问服务器时，都会带着 session id
+  + 服务器拿到 session id 之后，在内存找到与之对应的 session 这样就可以正常工作了。
+
+---
+
++  **Cookie与Session 的区别与对比**
+  + Cookie是客户端保持状态的方法。
+    + 简单理解就是存储由服务器发至客户端并由客户端保存的一段字符串。为了保持会话，服务器在响应客户端请求时将Cookie字符串放在Set-Cookie下，客户端收到Cookie之后保存这段字符串，之后再请求时候带上Cookie就可以被识别。
+    + Cookie在客户端的保存形式有两种：
+      + 会话Cookie：会话Cookie将服务器返回的Cookie字符串保持在内存中，关闭浏览器之后自动销毁
+      + 持久Cookie：持久Cookie则存储在客户端磁盘，有效期内客户端再次请求时都可以直接从本地取出，可以被多个浏览器代理所共享
+  + Session是服务器保持状态的方法
+    + Session保存在服务器上的数据库、或文件或内存中，每个用户有独立的 Session 记录用户的操作。
+    + 可以理解为每个用户有一个独一无二的Session ID 作为 Session文件的Hash键，通过这个值可以锁定具体的Session 结构的数据，这个Session结构中存储了用户操作行为。
+
+---
+
++  **Cookie 与 Session 的怎么选择**
+  + Cookie 只能存储 ASCII 码字符串，Session 可以存储任何类型的数据，在考虑数据复杂性时首选 Session；
+  + Cookie 存储在浏览器中容易被恶意查看。若非要将一些隐私数据存在 Cookie 中，可以将 Cookie 值进行加密，然后在服务器进行解密；
+  + 对于大型网站，若用户所有的信息都存储在 Session 中，开销非常大，不建议将所有用户信息都存储到 Session 中
+
+---
+
++  **知道SQL注入攻击吗?**
+  + 攻击者在HTTP请求中注入恶意的SQL代码，服务器使用参数构建数据库SQL命令时，恶意SQL被一起构造，并在数据库中执行。
+  +  如用户登录，输入用户名 lianggzone，密码 ‘ or ‘1’=’1 ，如果此时使用参数构造的方式，就会出现
+     `select * from user where name = ‘lianggzone’ and password = ‘’ or ‘1’=‘1’ `。不管用户名和密码是什么，使查询出来的用户列表不为空。
+  + 如何防范SQL注入攻击使用预编译的PrepareStatement是必须的，但是一般从两个方面同时入手：
+    + Web端
+      + 有效性检验。
+      + 限制字符串输入的长度。
+    +  服务端
+      + 不用拼接SQL字符串。
+      + 使用预编译的PrepareStatement。 
+      + 有效性检验。(为什么服务端还要做有效性检验?第一准则，外部都是不可信的，防止攻击者绕过 Web端请求)
+      + 过滤SQL需要的参数中的特殊字符。比如单引号、双引号。
+
+---
+
 +  **Linux系统是如何收发网络包的？**
   + 发送流程：
     + 首先，会先进入到网络接口层，在这一层会检查报文的合法性，如果不合法则丢弃，合法则会找出该网络包的上层 协议的类型， 比如是 IPv4，还是 IPv6，接着再去掉帧头和帧尾，然后交给网络层。
@@ -982,20 +1440,56 @@
 
 ---
 
-+  **简单介绍一下HTTP协议**
-  + 超文本传输协议HTTP是一个简单的请求—响应协议，运行在TCP之上，指定了客户端可能发送给服务器端的消息类型与响应类型，请求和响应消息以ASCII形式给出；而消息内容则具有一个类似MIME的格式。
++  **DDos** **攻击了解吗?**
+
+  + 拒绝服务 (DoS) 攻击是一种恶意尝试，它在短时间内发起大量请求，耗尽服务器的资源，无法响应正常的访问，造成网站实质下线。
+
+  + DDOS 里面的 DOS 是 denial of service（停止服务）的缩写，表示这种攻击的目的，就是使得服务中断。最前面的那个 D 是 distributed （分布式），表示攻击不是来自一个地方，而是来自四面八方，因此更难防。
+
+  + DDos 预防:
+
+    + 限制SYN/ICMP流量：路由器上配置SYN/ICMP的最大流量来限制SYN/ICMP封包所能占有的最高频宽，出现大量的超过所限定的SYN/ICMP流量时，说明不是正常的网络访问
+
+    + 网站请求IP过滤 ：通过限制单位时间内的POST请求、404页面等访问操作，来过滤掉次数过多的异常行为。
+    + 关闭不必要的服务/端口
 
 ---
 
++  **XSS** **攻击是什么?(低频)**
 
+  + XSS跨站脚本攻击：攻击者想尽一切方法将一段脚本内容放到目标网站的目标浏览器上解释执行
 
+  + 如何防范XSS攻击
 
+    + 前端，服务端，同时需要字符串输入的长度限制。 
 
+    + 前端，服务端，同时需要对HTML转义处理。将其中的”<”,”>”等特殊字符进行转义编码。
 
+      >  防 XSS 的核心是必须对输入的数据做过滤处理。
 
+---
 
++  **CSRF** **攻击?你知道吗?**
 
+  + 跨站点请求伪造，指攻击者通过跨站请求，以合法的用户的身份进行非法操作。
+  + 可以这么理解：攻击者盗用你的身份以第三方网站发送恶意请求。CRSF能做的事情包括利用你的身份发邮件，发短信，进行交易转账，甚至盗取账号信息。
 
+  + 如何防范？
+    +  **验证请求来源地址；** 在HTTP Header中有一个字段Referer，它记录了HTTP请求的来源地址。如果Referer是其他网站，就有可能是CSRF攻击，则拒绝该请求。但是，服务器并非都能取到Referer。很多用户出于隐私保护的考虑，限制了Referer的发送。
+    +  **关键操作添加验证码；** 通常情况下，验证码能够很好的遏制CSRF攻击，但是很多情况下，出于用户体验考虑，验证 码只能作为一种辅助手段，而不是最主要的解决方案。
+    +  **在请求地址添加 token 并验证。** 在HTTP请求中进行token验证，如果请求中没有token或者token内容不正确，则认为CSRF攻 击而拒绝该请求。
+
+---
+
++  **文件上传漏洞是如何发生的?你有经历过吗? 如何预防**
+  + 文件上传漏洞，指的是用户上传一个可执行的脚本文件，并通过此脚本文件获得了执行服务端命令的能力。
+  +  许多第三方框架、服务，都曾经被爆出文件上传漏洞，比如很早之前的Struts2，以及富文本编辑器等 等，可被攻击者上传恶意代码，有可能服务端就被人黑了。
+  + 预防：
+    + 判断文件类型。在判断文件类型的时候，可以结合使用MIME Type，后缀检查等方式。因为对于上传文件，不能简单地通过后缀名称来判断文件的类型，因为攻击者可以将可执行文件的后缀名称改为图片或其他后缀类型，诱导用户执行。
+    + 对上传的文件类型进行白名单校验，只允许上传可靠类型。
+    + 上传的文件需要进行重新命名，使攻击者无法猜想上传文件的访问路径，将极大地增加攻击成本， 同时向shell.php.rar.ara这种文件，因为重命名而无法成功实施攻击。
+    + 限制上传文件的大小。
+    + 单独设置文件服务器的域名。
 
 
 
