--- a/秋招经历/面经.md
+++ b/秋招经历/面经.md
@@ -177,110 +177,110 @@
 
 ### 1.编译与链接过程
 
-+  **一个程序从开始运行到结束的完整过程，你能说出来多少?**
+##### **一个程序从开始运行到结束的完整过程，你能说出来多少?**
 
-+  **静态链接与动态链接的区别？ 什么是共享库？**
+##### **静态链接与动态链接的区别？ 什么是共享库？**
 
-  + 预编译： 运行C预处理器(cpp)将C的源程序 hello.c 翻译成一个ASCII码的中间文件 hello.i. 
++ 预编译： 运行C预处理器(cpp)将C的源程序 hello.c 翻译成一个ASCII码的中间文件 hello.i. 
 
-    >  `gcc -E hello.c -o hello.i`
+  >  `gcc -E hello.c -o hello.i`
 
-    + 处理 “#include” 预编译指令，将文件内容替换到它的位置
-    + 删除所有的#define，展开所有的宏定义。 
-    + 处理所有的条件预编译指令，如 “#if”、“#endif”、“#ifdef”
-    + 删除所有的注释
-    + 添加行号和文件标识，便于编译时编译器产生调试用的行号信息
+  + 处理 “#include” 预编译指令，将文件内容替换到它的位置
+  + 删除所有的#define，展开所有的宏定义。 
+  + 处理所有的条件预编译指令，如 “#if”、“#endif”、“#ifdef”
+  + 删除所有的注释
+  + 添加行号和文件标识，便于编译时编译器产生调试用的行号信息
 
-  + 编译：驱动程序运行C编译器(gcc)，将hello.i翻一个一个ASCII汇编语言文件hello.s
++ 编译：驱动程序运行C编译器(gcc)，将hello.i翻一个一个ASCII汇编语言文件hello.s
 
-    >  `gcc -S hell0.i -o hello.s`
+  >  `gcc -S hell0.i -o hello.s`
 
-    1. 把预编译之后生成的xxx.i或xxx.ii文件，进行一系列词法分析、语法分析、语义分析及优化后，生成相应的汇编代码文件。
-    2. 词法分析：将源代码程序输入到扫描机中，将其中的字符序列分割成一系列的记号，类似于有限状态机
-    3. 语法分析：对由扫描器产生的记号进行语法分析，产生语法树。语法分析器完成的是对表达式语法层面的分析
-    4. 语义分析：语义分析器则对表达式是否有意义进行判断，其分析的语义是静态语义——在编译期能分期的语义，相对应的动态语义是在运行期才能确定的语义。
-    5. 优化：源代码级别的一个优化过程。 
-    6. 目标代码生成：由代码生成器将中间代码转换成目标机器代码，生成一系列的代码序列——汇编语言表示。
-    7. 目标代码优化：目标代码优化器对上述的目标机器代码进行优化，寻找合适的寻址方式、使用位移来替代乘法运算、删除多余的指令等。
+  1. 把预编译之后生成的xxx.i或xxx.ii文件，进行一系列词法分析、语法分析、语义分析及优化后，生成相应的汇编代码文件。
+  2. 词法分析：将源代码程序输入到扫描机中，将其中的字符序列分割成一系列的记号，类似于有限状态机
+  3. 语法分析：对由扫描器产生的记号进行语法分析，产生语法树。语法分析器完成的是对表达式语法层面的分析
+  4. 语义分析：语义分析器则对表达式是否有意义进行判断，其分析的语义是静态语义——在编译期能分期的语义，相对应的动态语义是在运行期才能确定的语义。
+  5. 优化：源代码级别的一个优化过程。 
+  6. 目标代码生成：由代码生成器将中间代码转换成目标机器代码，生成一系列的代码序列——汇编语言表示。
+  7. 目标代码优化：目标代码优化器对上述的目标机器代码进行优化，寻找合适的寻址方式、使用位移来替代乘法运算、删除多余的指令等。
 
-  + 汇编：运行汇编器(as)，将 hello.s 翻译成一个可重定位目标文件 hello.o
++ 汇编：运行汇编器(as)，将 hello.s 翻译成一个可重定位目标文件 hello.o
 
-    > `gcc -c hell0.s -o hello.o`
+  > `gcc -c hell0.s -o hello.o`
 
-    + 汇编器用来将汇编语言源程序转换为机器指令序列。
-    + 汇编结果是一个 可重定位目标文件 (如hello.o)，其中包含的是不可读的二进制代码，必须用相应的工具软件来查看其内容。
+  + 汇编器用来将汇编语言源程序转换为机器指令序列。
+  + 汇编结果是一个 可重定位目标文件 (如hello.o)，其中包含的是不可读的二进制代码，必须用相应的工具软件来查看其内容。
 
-  + 链接： 运行连接器程序**(ld)**，将**hello.o**和一些必要的系统目标文件组合起来，创建一个可执行文件**prog**:
++ 链接： 运行连接器程序**(ld)**，将**hello.o**和一些必要的系统目标文件组合起来，创建一个可执行文件**prog**:
 
-    > `gcc hell0.o -o hello`
+  > `gcc hell0.o -o hello`
 
-    + 将不同的源文件产生的目标文件进行链接，从而形成一个可以执行的程序。链接分为静态链接和动态链接:
-      + 静态链接：
-        + 对函数库的链接是放在编译时期完成的是静态链接 。 所有相关的目标文件与牵涉到的函数库被链接合成一个可执行文件。 所有需要的函数已复制到相关位置 。Linux下文件名为`libxxx.a`的形式 。
-        +  空间浪费：因为每个可执行程序中对所有需要的目标文件都要有一份副本，如果多个程序对同一个目标文件都有依赖，会出现同一个目标文件都在内存存在多个副本; 
-        + 更新困难：每当修改库函数代码，都需要重新进行编译链接形成可执行程序。
-        + 运行速度快：可执行程序中具备了所有执行程序所需要的任何内容， 在执行的时候运行速度快。
-      + 动态链接：
-        + 基本思想是把程序按照模块拆分成各个相对独立部分，库函数的链接载入推迟到程序运行时才链接在一起形成一个完整的程序，动态库文件名`lib**.so`。
-        + 共享库：即使每个程序都依赖同一个库，这多个程序在执行时共享同一份副本
-        + 更新方便：更新时只需要替换原来的目标文件，而无需将所有的程序再重新链接一遍
-        + 性能损耗：把链接推迟到了程序运行时，所以每次执行程序都需要进行链接
+  + 将不同的源文件产生的目标文件进行链接，从而形成一个可以执行的程序。链接分为静态链接和动态链接:
+    + 静态链接：
+      + 对函数库的链接是放在编译时期完成的是静态链接 。 所有相关的目标文件与牵涉到的函数库被链接合成一个可执行文件。 所有需要的函数已复制到相关位置 。Linux下文件名为`libxxx.a`的形式 。
+      +  空间浪费：因为每个可执行程序中对所有需要的目标文件都要有一份副本，如果多个程序对同一个目标文件都有依赖，会出现同一个目标文件都在内存存在多个副本; 
+      + 更新困难：每当修改库函数代码，都需要重新进行编译链接形成可执行程序。
+      + 运行速度快：可执行程序中具备了所有执行程序所需要的任何内容， 在执行的时候运行速度快。
+    + 动态链接：
+      + 基本思想是把程序按照模块拆分成各个相对独立部分，库函数的链接载入推迟到程序运行时才链接在一起形成一个完整的程序，动态库文件名`lib**.so`。
+      + 共享库：即使每个程序都依赖同一个库，这多个程序在执行时共享同一份副本
+      + 更新方便：更新时只需要替换原来的目标文件，而无需将所有的程序再重新链接一遍
+      + 性能损耗：把链接推迟到了程序运行时，所以每次执行程序都需要进行链接
 
 ---
 
-+   **介绍一下静态库与动态库的创建与使用**
+##### **介绍一下静态库与动态库的创建与使用**
 
-  + **静态库**
++ **静态库**
 
-    + **静态库命名规则：** lib + 库的名字 + .a
+  + **静态库命名规则：** lib + 库的名字 + .a
 
-    + **制作规则：**
+  + **制作规则：**
 
-      + **生成对应的.o文件：** 参数 -c
-      + **将生成的.o文件进行打包：** ar rcs + 静态库的名字(libMyCal.a) + 生成的所有.o文件
+    + **生成对应的.o文件：** 参数 -c
+    + **将生成的.o文件进行打包：** ar rcs + 静态库的名字(libMyCal.a) + 生成的所有.o文件
 
-    + **发布和使用静态库：**
+  + **发布和使用静态库：**
 
-      + 发布静态库
-      + 头文件
+    + 发布静态库
+    + 头文件
 
-    + **例子：**
+  + **例子：**
 
-      <div align = center><img src="../图片/链接2.png" width="250px" /></div>
+    <div align = center><img src="../图片/链接2.png" width="250px" /></div>
 
-      + include文件夹存放头文件，src文件夹存放源文件，lib文件夹存放生成的库文件
+    + include文件夹存放头文件，src文件夹存放源文件，lib文件夹存放生成的库文件
 
-      + 生成.o文件
+    + 生成.o文件
 
-        ```bash
-        gcc *.c -c -I ../include 
-        ```
+      ```bash
+      gcc *.c -c -I ../include 
+      ```
 
-      + 打包
+    + 打包
 
-        ```bash
-        ar rcs libMyCal.a *.o
-        mv libMyCal.a ../lib
-        ```
+      ```bash
+      ar rcs libMyCal.a *.o
+      mv libMyCal.a ../lib
+      ```
 
-        <div align = center><img src="../图片/链接3.png" width="210px" /></div>
+      <div align = center><img src="../图片/链接3.png" width="210px" /></div>
 
-      + 利用头文件和静态库来运行程序
+    + 利用头文件和静态库来运行程序
 
-        ```bash
-        gcc main.c lib/libMyCal.a -o sum -I include
-        ```
+      ```bash
+      gcc main.c lib/libMyCal.a -o sum -I include
+      ```
 
-        ```bash
-        # -I include头文件
-        # -L 库的目录
-        # -l 库的名字，去头去尾
-        gcc main.c -I include -L lib -l MyCal -o sum
-        ```
+      ```bash
+      # -I include头文件
+      # -L 库的目录
+      # -l 库的名字，去头去尾
+      gcc main.c -I include -L lib -l MyCal -o sum
+      ```
 
-    + 利用 nm命令 查看静态库内容
+  + 利用 nm命令 查看静态库内容
 
-      <div align = center><img src="../图片/链接4.png" width="300px" /></div>
+    <div align = center><img src="../图片/链接4.png" width="300px" /></div>
 
 
   + 动态库
@@ -349,17 +349,28 @@
 
 ---
 
-+  **gcc 与 g++ 的区别？**
+##### 静态链接库和动态链接库会加载在内存的哪里
 
-  + 从文件角度：
-    + 后缀为 .c 的， gcc 把它当作是C程序， g++当作是C++程序；
-    + 后缀为 .cpp 的，两者都会认为是 C++程序
-    + 虽然 C++是 C 的超集，但是两者对语法的要求是有区别的 ： printString在 c++ 编译环境下是未定义的
-  + 编译和链接的角度：
-    + 编译可以用 gcc/g++； g++会自动调用 gcc，二者等价 。
-    + 链接可以用 g++或者 gcc-lstce++。 因为 gcc 命令不能自动和 c ++程序使用的库链接，所以通常使用 g++来完成链接 。 
++ 动态链接库(Windows的.dll和Linux的.so)及静态链接库(Windows的.lib和Linux的.a)文件都按照可执行文件格式存储
++ 静态库在编译汇编后，在链接时分成可执行文件映像，与程序一起链接成目标文件，然后进行装载运行，只要程序使用就会这么操作
+  + 代码段（.text）: 程序源代码编译后的机器指令
+  + 数据段（.data）: 已初始化了的全局变量和局部静态变量数据
+  + .bss段（.bss）:未初始化的全局变量和局部静态变量
++ 把程序按照模块拆分成各个相对独立部分，在程序运行时才将它们链接在一起形成一个完整的程序。装载在堆与栈的中间，即MMAP位置(Memory Mapping Segment)
 
-  + extern ”C”与 gcc/g++ 并无关系，无论是 gcc 还是 g++，用 extern”C”时，都是以 C 的命名方式来为symbol命名；否则，都以 C++方式命名。
+---
+
+##### **gcc 与 g++ 的区别？**
+
++ 从文件角度：
+  + 后缀为 .c 的， gcc 把它当作是C程序， g++当作是C++程序；
+  + 后缀为 .cpp 的，两者都会认为是 C++程序
+  + 虽然 C++是 C 的超集，但是两者对语法的要求是有区别的 ： printString在 c++ 编译环境下是未定义的
++ 编译和链接的角度：
+  + 编译可以用 gcc/g++； g++会自动调用 gcc，二者等价 。
+  + 链接可以用 g++或者 gcc-lstce++。 因为 gcc 命令不能自动和 c ++程序使用的库链接，所以通常使用 g++来完成链接 。 
+
++ extern ”C”与 gcc/g++ 并无关系，无论是 gcc 还是 g++，用 extern”C”时，都是以 C 的命名方式来为symbol命名；否则，都以 C++方式命名。
 
 ---
 
@@ -1506,17 +1517,65 @@
 ### 1.Linux 命令
 
 + linux 中查看监听网络端口命令，more和cat的区别
-
 + linux 改密码命令 改权限命令
-
-+  如何结束一个进程， -9 是什么含义、
-
++ 如何结束一个进程， -9 是什么含义、
 + ps的底层实现(我按照自己的理解，讲了一下PCB的机制，然后说大概是扫描了一下PCB的[链表](https://www.nowcoder.com/jump/super-jump/word?word=链表)，面试官好像挺满意的)。
-
 + 对于大文件，为什么CP比MV慢很多
 + 如果rm以及rm -f一个正在被使用的文件，会发生什么
 
-### 2.进程与线程
+---
+
+### 2.操作系统基本知识
+
+##### **冯诺依曼结构有哪几个模块?分别对应现代计算机的哪几个部分?**
+
++ 存储器：内存 
++ 控制器：南桥北桥 
++ 运算器：CPU 
++ 输入设备：键盘 
++ 输出设备：显示器、网卡
+
+##### **局部性原理你知道吗?主要有哪两大局部性原理?各自是什么?**
+
++ 时间局部性：如果执行了程序中的某条指令，那么不久后这条指令很有可能再次执行；如果某个数据被访问过，不久之后该数据很可能再次被访问。(因为程序中存在大量的循环) 
++ 空间局部性：一旦程序访问了某个存储单元，在不久之后，其附近的存储单元也很有可能被访问。(因为很多数据在内存中都是连续存放的，并且程序的指令也是顺序地在内存中存放的)
+
+---
+
+##### Linux中异常和中断的区别
+
++ 中断是由硬件设备产生的，从物理上说就是电信号，之后通过中断控制器发送给CPU，CPU判断收到的中断来自于哪个硬件设备(这定义在内核中)，最后由CPU发送给内核，内核处理中断。
++ 异常是由 CPU 执行指令的内部事件引起，如地址越界、算术溢出等。它会发送给内核，要求内核处理这些异常
++ 相同点：
+  + 最后都是由CPU发送给内核，由内核去处理 
+  + 处理程序的流程设计上是相似的
++ 不同点：
+  + 产生源不相同，异常是由CPU产生的，而中断是由硬件设备产生的 
+  + 内核需要根据是异常还是中断调用不同的处理程序 
+  + 中断不是时钟同步的，这意味着中断可能随时到来；异常由于是CPU产生的，所以它是时钟同步的 
+  + 当处理中断时，处于中断上下文中；处理异常时，处于进程上下文中
+
+---
+
+##### **ASCII、Unicode和UTF-8编码的区别?**
+
++ ASCII
+  + ASCII 只有127个字符，表示英文字母的大小写、数字和一些符号
++ Unicode
+  + Unicode将不同语言统一到一套编码格式中，通常两个字节表示一个字符，而ASCII是一个字节表示一个字符
+  + 如果编译的文本是全英文的，用Unicode编码比ASCII编码需要多一倍的存储空间，在存储和传输上不划算
++ UTF-8
+  + 为了解决上述问题，把Unicode编码转化为 **可变长编码** UTF-8编码，UTF-8编码将Unicode字符按数字大小编码为1-6个字节，英文字母被编码成一个字节，常用汉字被编码成三个字节
+
++ 三者关系：
+  + 在计算机内存中，统一使用Unicode编码，当需要保存到硬盘或者需要传输的时候，就转换为UTF-8 编码
+  + 用记事本编辑的时候，从文件读取的UTF-8字符被转换为Unicode字符到内存里，编辑完成后，保存的时候再把Unicode转换为UTF-8保存到文件。
+
+
+
+---
+
+### 3.进程与线程
 
 + 两个进程会存放在相同的内存地址吗？讲几种进程调度的算法？进程的状态有哪几种？哪些操作会使进程从用户态到内核态呢？
 + Linux进程地址空间分布
@@ -1530,148 +1589,706 @@
 
 ---
 
-+  **进程，线程和协程的区别和联系**
-  + 定义：
-    + 进程： 进程是在内存中运行着的程序，是资源分配和拥有的基本单位
-    + 线程：线程是轻量级的进程，是最小的执行单位
-    + 协程：用户态的轻量级线程，线程内部调度的基本单位
-  + 区别：
-    1. **切换情况：**
-       + 进程：进程CPU环境的保存以及 新调度的进程CPU环境的设置 ；涉及栈、寄存器、页表和文件句柄等
-       + 线程：保存和设置程序计数器，少量寄存器和栈的内容
-       + 协程：先将寄存器上下文和栈保存，等切换回来的时候再进行恢复
-    2. **切换者**
-       + 进程：操作系统
-       + 线程：操作系统
-       + 协程：用户
-    3. **切换过程**
-       + 进程：用户态—>内核态—>用户态
-       + 线程：用户态—>内核态—>用户态
-       + 协程：只有用户态
-    4. **调用栈**
-       + 进程：内核栈
-       + 线程：内核栈
-       + 协程：用户栈
-    5. **拥有资源**
-       + 进程：CPU资源，内存资源，文件资源，句柄等
-       + 线程：程序计数器，寄存器，栈等
-       + 协程：自己的寄存器上下文和栈
-    6. **系统开销**
-       + 进程：切换涉及到虚拟地址空间，内核栈与硬件上下文，开销较大
-       + 线程：切换时只需保存和设置少量的寄存器内容，开销较小
-       + 协程：直接操作栈则基本没有内核切换的开销，可以不加锁访问全局变量，所以上下文切换非常快
-    7. **通信方面**
-       + 进程：需要借助操作系统内核
-       + 线程：线程间通信只需直接读写进程数据段，如全局变量来进行通信
-       + 协程：共享内存，消息队列等
+##### **进程，线程和协程的区别和联系**
+
++ 定义：
+  + 进程： 进程是在内存中运行着的程序，是资源分配和拥有的基本单位
+  + 线程：线程是轻量级的进程，是最小的执行单位
+  + 协程：用户态的轻量级线程，线程内部调度的基本单位
++ 区别：
+  1. **切换情况：**
+     + 进程：进程CPU环境的保存以及 新调度的进程CPU环境的设置 ；涉及栈、寄存器、页表和文件句柄等
+     + 线程：保存和设置程序计数器，少量寄存器和栈的内容
+     + 协程：先将寄存器上下文和栈保存，等切换回来的时候再进行恢复
+  2. **切换者**
+     + 进程：操作系统
+     + 线程：操作系统
+     + 协程：用户
+  3. **切换过程**
+     + 进程：用户态—>内核态—>用户态
+     + 线程：用户态—>内核态—>用户态
+     + 协程：只有用户态
+  4. **调用栈**
+     + 进程：内核栈
+     + 线程：内核栈
+     + 协程：用户栈
+  5. **拥有资源**
+     + 进程：CPU资源，内存资源，文件资源，句柄等
+     + 线程：程序计数器，寄存器，栈等
+     + 协程：自己的寄存器上下文和栈
+  6. **系统开销**
+     + 进程：切换涉及到虚拟地址空间，内核栈与硬件上下文，开销较大
+     + 线程：切换时只需保存和设置少量的寄存器内容，开销较小
+     + 协程：直接操作栈则基本没有内核切换的开销，可以不加锁访问全局变量，所以上下文切换非常快
+  7. **通信方面**
+     + 进程：需要借助操作系统内核
+     + 线程：线程间通信只需直接读写进程数据段，如全局变量来进行通信
+     + 协程：共享内存，消息队列等
 
 ---
 
-+   **线程与进程的比较**
-  +  进程： 进程是在内存中运行着的程序，是资源分配和拥有的基本单位
-  +  线程：线程是轻量级的进程，是最小的执行单位
-  +  对比：
-     +  线程启动速度快，轻量级
-     +  线程的系统开销小
-     +  线程使用有一定难度，需要处理数据一致性问题 
-     +  同一线程共享的有堆、全局变量、静态变量、指针，引用、文件等，而独自占有栈
+##### **线程与进程的比较**
+
++  进程： 进程是在内存中运行着的程序，是资源分配和拥有的基本单位
++  线程：线程是轻量级的进程，是最小的执行单位
++  对比：
+   +  调度：
+      +  线程是调度的基本单位(PC，状态码，通用寄存器，线程栈及栈指针);
+      +  进程是拥有资源 的基本单位(打开文件，堆，静态区，代码段等)。 
+   +  并发性：
+      +  一个进程内多个线程可以并发(最好和CPU核数相等);
+      +  多个进程可以并发。 
+   +  拥有资源:
+      +  线程不拥有系统资源，但一个进程的多个线程可以共享隶属进程的资源;
+      +  进程是拥有资源的独立单位。 
+   +  系统开销:
+      +  线程创建销毁只需要处理PC值，状态码，通用寄存器值，线程栈及栈指针即可;
+      +  进程创建和销毁需要重新分配及销毁task_struct结构。
 
 ---
 
-+   **介绍一下进程控制块PCB，及其中的内容**
-  + 每个进程在内核中都有一个进程控制块(PCB)来维护进程相关的信息，Linux内核的进程控制块是 task_struct结构体。
-  + **PCB**内部重要成员
-    1. 进程标识符
-    2. 进程当前状态
-    3. 进程优先级
-    4. 进程资源清单
-    5. 进程相应的程序和数据地址，以便把PCB与其程序和数据联系起来。
-    6. 进程同步与通信机制等等
+##### **介绍一下进程控制块PCB，及其中的内容**
+
++ 每个进程在内核中都有一个进程控制块(PCB)来维护进程相关的信息，Linux内核的进程控制块是 task_struct结构体。
++ **PCB**内部重要成员
+  1. 进程标识符
+  2. 进程当前状态
+  3. 进程优先级
+  4. 进程资源清单
+  5. 进程相应的程序和数据地址，以便把PCB与其程序和数据联系起来。
+  6. 进程同步与通信机制等等
 
 ---
 
-+  **你知道哪些进程？**
+##### ==进程的创建方法==
 
-  + 孤儿进程：
 
-    + 父进程已经终止的进程**,**它们的父进程都改变为**init**进程。这些进程自身变成孤儿进程，被init进程收养。
-
-    > 由init进程收养的进程终止时不会成为僵尸进程。init被编写成无论何时只要有一个子进程终止，init就会调用 一个wait函数取得其终止状态。
-
-  + 僵尸进程：
-
-    + 一个已经终止、但是其父进程尚未对其进行善后处理(获取终止子进程的有关信息、释放它仍占用的资源)的进程被称为僵死进程(zombie)，终止进程的残留资源(PCB)存放于内核中
-
-    > 特别注意，僵尸进程是不能使用kill命令清除掉的。因为kill命令只是用来终止进程的，而僵尸进程已经终止。
-    >
-    > + 如果父进程没有调用wait、waitpid，怎么杀死僵尸进程
-    >   + 查看进程：ps -ef | grep defunct ： 1 running, 94 sleeping, 0 stopped, **0 zombie**
-    >   + 一般僵尸进程很难直接kill掉，可以kill僵尸父进程。父进程死后，僵尸进程成为”孤儿进程”，过继给1号进程init，init始终会负责清理僵尸进程．它产生的所有僵尸进程也跟着消失。
-    >   + ps -e -o ppid,stat | grep Z | cut -d " " -f2 | xargs kill -9
-
-  + 守护进程：
-
-    + 是 Linux 的一种⻓期运行的后台服务进程 ，也称「精灵进程」。常⻅的 httpd、 named、sshd 等服务都是以守护进程 Daemon 方式运行的
 
 ---
 
-+  **什么是惊群效应**
-  + 惊群现象就是多进程（多线程）在同时阻塞等待同一个事件的时候（休眠状态），当等待的事件发生，它会唤醒等待的所有进程（或者线程），但是最终却只可能有一个进程（线程）获得这个事件的“控制权”，其他进程（线程）获取失败，只能重新进入休眠状态，这种现象和性能浪费就叫做惊群。
-  + 现象的影响：
-    + 这种效应使得系统对用户进程/线程频繁地做无效的调度，上下文切换，系统性能大打折扣。
-    + 而且为了确保只有一个线程得到资源，用户必须对资源操作进行加锁保护，进一步加大了系统开销。
-  + 例子：
-    + Linux 2.6 之前。 主进程创建了socket、bind、listen之后，fork() 出来多个进程，每个子进程都开始循环处理（accept）这个listen_fd。 每个进程都阻塞在accept上，当一个新的连接到来时候，所有的进程都会被唤醒，但是其中只有一个进程会接受成功，其余皆失败，重新休眠。
-    + Linux 2.6 之后的版本，Linux内核已经解决了accept（）函数的“惊群”现象，大概的处理方式就是，当内核接收到一个客户连接后，只会唤醒等待队列上的第一个进程（线程），所以如果服务器采用accept阻塞调用方式，在最新的linux系统中已经没有“惊群效应”了
+##### ==线程的创建方法==
+
+
 
 ---
 
-### 3.死锁
+##### **多进程和多线程的区别是什么?换句话说，什么时候该用多线程，什么时候该用多进程?**
+
++ 频繁修改：需要频繁创建和销毁的优先使用多线程
++ 计算量：需要大量计算的优先使用多线程， 因为需要消耗大量CPU资源且切换频繁
++ 相关性：任务间相关性比较强的用多线程，相关性比较弱的用多进程。因为线程之间的数据共享和同步比较简单。
++ 多分布：可能要扩展到多机分布的用多进程，多核分布的用多线程。
+
+但是实际中更常见的是进程加线程的结合方式，并不是非此即彼的。
+
+---
+
+##### **服务器高并发的解决方案你知道多少?**
+
++ 应用数据与静态资源分离
+  + 将静态资源(图片，视频，js，css等)单独保存到专门的静态资源服务器中，在客户端访问的时候从静态资源服务器中返回静态资源，从主服务器中返回应用数据。
++ 客户端缓存
+  + 因为效率最高，消耗资源最小的就是纯静态的html页面，所以可以把网站上的页面尽可能用静态的来实现，在页面过期或者有数据更新之后再将页面重新缓存。或者先生成静态页面，然后用ajax异步请 求获取动态数据。
++ 集群和分布式
+  + 集群是所有的服务器都有相同的功能，请求哪台都可以，主要起分流作用
+  + 分布式是将不同的业务放到不同的服务器中，处理一个请求可能需要使用到多台服务器，起到加快请求处理的速度
+  + 使用服务器集群和分布式架构使得原本属于一个服务器的计算压力分散到多个服务器上。同时加快请求处理的速度
++ 反向代理
+  + 在访问服务器的时候，服务器通过别的服务器获取资源或结果返回给客户端。
+
+---
+
+##### ==线程的回收方法==
+
+
+
+
+
+---
+
+##### **你知道哪些进程？**
+
++ 孤儿进程：
+
+  + 父进程已经终止的进程**,**它们的父进程都改变为**init**进程。这些进程自身变成孤儿进程，被init进程收养。
+
+  > 由init进程收养的进程终止时不会成为僵尸进程。init被编写成无论何时只要有一个子进程终止，init就会调用 一个wait函数取得其终止状态。
+
++ 僵尸进程：
+
+  + 一个已经终止、但是其父进程尚未对其进行善后处理(获取终止子进程的有关信息、释放它仍占用的资源)的进程被称为僵死进程(zombie)，终止进程的残留资源(PCB)存放于内核中
+  + 处理僵尸进程：当一个进程结束时，它将给其父进程发送SIGCHLD信号。在父进程中捕获SIGCHLD信号，并在信号处理函数中调用waitpid函数以“彻底结束”一个子进程.
+
+  > 特别注意，僵尸进程是不能使用kill命令清除掉的。因为kill命令只是用来终止进程的，而僵尸进程已经终止。
+  >
+  > + 如果父进程没有调用wait、waitpid，怎么杀死僵尸进程
+  >   + 查看进程：ps -ef | grep defunct ： 1 running, 94 sleeping, 0 stopped, **0 zombie**
+  >   + 一般僵尸进程很难直接kill掉，可以kill僵尸父进程。父进程死后，僵尸进程成为”孤儿进程”，过继给1号进程init，init始终会负责清理僵尸进程．它产生的所有僵尸进程也跟着消失。
+  >   + ps -e -o ppid,stat | grep Z | cut -d " " -f2 | xargs kill -9
+
++ 守护进程：
+
+  + 是 Linux 的一种⻓期运行的后台服务进程 ，也称「精灵进程」。常⻅的 httpd、 named、sshd 等服务都是以守护进程 Daemon 方式运行的
+
+---
+
+##### **进程终止的几种方式**
+
++ 5种正常终止
+
+  1. 从main返回
+
+     > 等效于调用exit。
+
+  2. 调用exit (先执行一些清理操作再进入内核)
+
+     >  操作包括调用各终止处理程序，然后关闭所有标准I/O流。
+
+  3. 调用 \_exit 或 \_Exit (立即进入内核) 
+
+     > + 为进程提供一种无需运行终止处理程序或信号处理程序而终止的方法。
+     >
+     > + 三个都带有退出状态, exit status 
+
+  4. 最后一个线程从其启动例程返回
+
+  5. 从最后一个线程调用 pthread_exit
+
++  3种异常终止
+
+  1. 调用 abort 
+
+     > 产生SIGABRT信号，下一种异常终止的特例
+
+  2. 接到一个信号
+
+     >  信号可由进程自身，其他进程或内核产生
+
+  3. 最后一个线程对取消 (cancellation) 请求做出响应 
+
+     >  一个线程要求取消另一个线程，若干时间后，目标线程终止
+
+
+
+---
+
+##### ==**进程组、作业和会话**==
+
+
+
+---
+
+##### ==写一个守护进程==
+
+
+
+---
+
+##### **什么是惊群效应**
+
++ 惊群现象就是多进程（多线程）在同时阻塞等待同一个事件的时候（休眠状态），当等待的事件发生，它会唤醒等待的所有进程（或者线程），但是最终却只可能有一个进程（线程）获得这个事件的“控制权”，其他进程（线程）获取失败，只能重新进入休眠状态，这种现象和性能浪费就叫做惊群。
++ 现象的影响：
+  + 这种效应使得系统对用户进程/线程频繁地做无效的调度，上下文切换，系统性能大打折扣。
+  + 而且为了确保只有一个线程得到资源，用户必须对资源操作进行加锁保护，进一步加大了系统开销。
++ 例子：
+  + Linux 2.6 之前。 主进程创建了socket、bind、listen之后，fork() 出来多个进程，每个子进程都开始循环处理（accept）这个listen_fd。 每个进程都阻塞在accept上，当一个新的连接到来时候，所有的进程都会被唤醒，但是其中只有一个进程会接受成功，其余皆失败，重新休眠。
+  + Linux 2.6 之后的版本，Linux内核已经解决了accept（）函数的“惊群”现象，大概的处理方式就是，当内核接收到一个客户连接后，只会唤醒等待队列上的第一个进程（线程），所以如果服务器采用accept阻塞调用方式，在最新的linux系统中已经没有“惊群效应”了
+
+---
+
+##### 一个进程可以创建多少个线程？和什么有关系？
+
++ 理论上，一个进程可用虚拟空间是2G，默认情况下，线程的栈的大小是1MB，理论上最多创建2048个线程。如果创建多于2048的话，必须修改编译器的设置。
+
++ 因此，一个进程可以创建的线程数由可用虚拟空间和线程的栈的大小共同决定，只要虚拟空间足够，那么新线程的建立就会成功。如果需要创建超过2K以上的线程，减小你线程栈的大小就可以实现了
+
+---
+
+##### 介绍一下进程的上下文切换
+
++ 进程控制块记录了进程全部状态信息。每一次进程调度就是一次上下文切换，上下文本质上就是当前运行状态，主要包括通用寄存器、浮点寄存器、状态寄存器、程序计数器、用户栈和内核数据结构(页表、进程表、文件表)等。
++ 进程执行时刻，内核可以决定抢占当前进程并开始新的进程，这个过程由内核调度器完成，当调度器选择了某个进程时称为该进程被调度，该过程通过上下文切换来改变当前状态。
++ 一次完整的上下文切换通常是进程原先运行于用户态，之后因系统调用或时间片到切换到内核态执行内核指令，完成上下文切换后回到用户态，此时已经切换到进程B。
+
+---
+
+#####  介绍一下进程状态的切换
+
++ 新建态： 对应于进程刚刚被创建时没有被提交的状态，并等待系统完成创建进程的所有必要信息。
++ 终止态：进程已结束运行，回收除进程控制块之外的其他资源，并让其他进程从进程控制块中收集有关信息（如记帐和将退出代码传递给父进程）
+
++ 就绪状态(ready)：等待被调度 
++ 运行状态(running)
++ 阻塞状态(waiting)：等待资源
+  + 只有就绪态和运行态可以相互转换，其它的都是单向转换。就绪状态的进程通过调度算法从而获得 CPU 时间，转为运行状态；而运行状态的进程，在分配给它的 CPU 时间片用完之后就会转为就绪状态，等待下一次调度。
+  + 阻塞状态是缺少需要的资源从而由运行状态转换而来，但是该资源不包括 CPU 时间，缺少 CPU 时间 会从运行态转换为就绪态。
+
+---
+
+##### **终端退出，终端运行的进程会怎样**
+
++ 终端在退出时会发送SIGHUP给对应的bash进程，bash进程收到这个信号后首先将它发给session下面的进 程，如果程序没有对SIGHUP信号做特殊处理，那么进程就会随着终端关闭而退出
+
+---
+
+##### **如何让进程后台运行**
+
+1. 命令后面加上&即可，实际上，这样是将命令放入到一个作业队列中了
+2. nohup + &，将标准输出和标准错误缺省会被重定向到 nohup.out 文件中，忽略所有挂断 (SIGHUP)信号
+3. 写成守护进程
+
+---
+
+##### **进程调度算法你了解多少?**
+
+1. 先来先服务：非抢占式的调度算法，按请求顺序进行调度。有利于长作业，不利于短作业，短作业必须一直等待前面的长作业执行完毕才能执行
+2. 短作业优先：非抢占式的调度算法，按估计运行时间最短的顺序进行调度。长作业有可能会饿死，处于一直等待短作业执行完毕的状态。
+3. 最短剩余时间优先：最短作业优先的抢占式版本，按剩余运行时间的顺序进行调度。 
+4. 时间片轮转：
+   + 将所有就绪进程按 FCFS 的原则排成一个队列，每次调度时把 CPU 时间分配给队首进程，该进程可以执行一个时间片。 当时间片用完时，由计时器发出时钟中断，调度程序便停止该进程的执行，并将它送往就绪队列的末尾，同时继续把 CPU 时间分配给队首的进程。受时间片设置影响，太短太长都不行。
+5. 优先级调度：为每个进程分配一个优先级，按优先级进行调度。
+   + 为了防止低优先级的进程永远等不到调度，可以随着时间的推移增加等待进程的优先级。
+6. 多级反馈队列：可以看成是时间片轮转调度算法和优先级调度算法的结合。
+   +  一个进程需要执行 100 个时间片，如果采用时间片轮转调度算法，那么需要交换 100 次。
+   +  多级队列是为这种需要连续执行多个时间片的进程考虑，它设置了多个队列，每个队列时间片大小都不同，例如 1,2,4,8,..。进程在第一个队列没执行完，就会被移到下一个队列。
+
+---
+
+##### ==进程同步的四种方法==
+
+1. 临界区：对临界资源进行访问的那段代码称为临界区。 
+
+   + 为了互斥访问临界资源，每个进程在进入临界区之前，需要先进行检查。
+
+2. 同步与互斥：
+
+   + 同步：多个进程因为合作产生的直接制约关系，使得进程有一定的先后执行关系。
+   + 互斥：多个进程在同一时刻只有一个进程能进入临界区。
+
+3. 信号量：是一个整型变量，对其执行 down 和 up 操作，也就是常见的 P 和 V 操作。
+
+   +  **down** : 如果信号量大于 0 ，执行 -1 操作;如果信号量等于 0，进程睡眠，等待信号量大于 0; 
+
+   +  **up** :对信号量执行 +1 操作，唤醒睡眠的进程让其完成 down 操作。
+
+     >  down 和 up 操作需要被设计成原语，不可分割，通常的做法是在执行这些操作的时候屏蔽中断
+
+   + 如果信号量的取值只能为 0 或者 1，那么就成为了互斥量(Mutex) ，0 表示临界区已经加锁，1 表示临界区解锁。
+
+4. 管程：使用信号量机制实现的生产者消费者问题需要做很多控制，管程把控制的代码独立出来，不仅不容易出错，也使得客户端代码调用更容易。
+
+   + 在一个时刻只能有一个进程使用管程。进程在无法继续执行的时候不能一直占用管程
+
+---
+
+##### ==信号量实现生产者消费者问题==
+
+---
+
+
+
+---
+
+##### ==Linux下进程通信方式==
+
++ 管道
+  + 无名管道：半双工通信方式，数据只能单向流动，而且只在具有亲缘关系的进程(父子)之间使用。
+  + 有名管道：半双工的通信方式，允许在没有亲缘关系的进程之间使用，管道是先进先出的通信方式。
++ 消息队列：有消息的链表，存放在内核中并由消息队列标识符标识。它克服了信号传递信息少、管道只能承载无格式字节流以及缓冲区大小受限等缺点。
++ 共享内存：映射一段能被其他进程所访问的内存，这段共享内存由一个进程创建，但多个进程都可以访问。
+  + 共享内存是最快的IPC方式，是针对进程间通信方式运行效率低而专门设计的。往往与信号量，配合使用来实现进程间的同步和通信。
++ 套接字：适用于不同机器间进程通信，在本地也可作为两个进程通信的方式。
++ 信号：用于通知接收进程某个事件已经发生，比如按下ctrl + C就是信号。
++ 信号量：是一个计数器，可以用来控制多个进程对共享资源的访问。常作为一种锁机制，实现进程、线程的对临界区的同步及互斥访问。
+
+---
+
+##### Linux下的同步机制
+
++ POSIX信号量：可用于进程同步，也可用于线程同步。
+
++ POSIX互斥锁 + 条件变量：只能用于线程同步。
+
+---
+
+##### ==介绍几种典型的锁==
+
+
+
+---
+
+##### ==你知道哪些线程锁==
+
+
+
+---
+
+##### ==**如果系统中具有快表后，那么地址的转换过程变成什么样了?**==
+
+
+
+---
+
+
+
+
+
+### 4.死锁
 
 + 死锁的四个必要条件
 
-
-
 + 举例子讲解如何解决死锁
 
+##### 哲学家进餐问题
 
++ 五个哲学家围着一张圆桌，每个哲学家面前放着食物。哲学家有两种交替活动：吃饭以及思考。 当一个哲学家吃饭时，需要先拿起自己左右两边的两根筷子，并且一次只能拿起一根筷子。
+
++ 如果所有哲学家同时拿起左手边的筷子，那么所有哲学家都在等待其它哲学家吃完并释放自己手中的筷子，导致死锁
++ 为了防止死锁的发生，可以设置两个条件:
+  + 必须同时拿起左右两根筷子;
+  +  只有在两个邻居都没有进餐的情况下才允许进餐。
+
+##### 读—写者问题
+
++ 允许多个进程同时对数据进行读操作，但是不允许读和写以及写和写操作同时发生。
++ 一个整型变量 count 记录在对数据进行读操作的进程数量，一个互斥量 count_mutex 用于对 count 加锁， 一个互斥量 data_mutex 用于对读写的数据加锁。
+
+---
+
+### 5.内存
+
+##### **虚拟技术你了解吗?**
+
++ 虚拟技术把一个物理实体转换为多个逻辑实体。
++ 主要有两种虚拟技术：时(时间)分复用技术 和 空(空间)分复用技术。
+  + 多进程与多线程：多个进程能在同一个处理器上并发执行使用了时分复用技术，让每个进程轮流占用处理器，每次只执行一小个时间片并快速切换。
+  + 虚拟内存使用了空分复用技术，它将物理内存抽象为地址空间，每个进程都有各自的地址空间。地址空间的页被映射到物理内存，地址空间的页并不需要全部在物理内存中，当使用到一个没有在物理内存的页时，执行页面置换算法，将该页置换到内存中。
+
+---
+
+##### **虚拟内存的目的是什么?**
+
++ 虚拟内存的目的是为了让物理内存扩充成更大的逻辑内存，从而让程序获得更多的可用内存。
+  1. 为了更好的管理内存，操作系统将内存抽象成地址空间。每个程序拥有自己的地址空间，这个地址空间被分割成多个块，每一块称为一页。
+  2. 这些页被映射到物理内存，但不需要映射到连续的物理内存，也不需要所有页都必须在物理内存中。当程序引用到不在物理内存中的页时，由硬件执行必要的映射，将缺失的部分装入物理内存并重新执行失败的指令。
++ 所以虚拟内存允许程序不用将地址空间中的每一页都映射到物理内存，也就是说一个程序不需要全部调入内存就可以运行，这使得有限的内存运行大程序成为可能。
+
+---
+
+##### 谈谈你理解的逻辑地址，线性地址，物理地址和虚拟地址
+
++ 物理地址：用于内存芯片级的单元寻址，与处理器和CPU连接的地址总线相对应。
+
++ 虚拟地址：是相对于物理内存来进行的抽像描述。现代操作系统提供了虚拟内存。进程使用虚拟内存中的地址，由操作系统协助相关硬件，把它“转换”成真正的物理地址。
+
++ 逻辑地址：Intel为了兼容，将远古时代的段式内存管理方式保留了下来。逻辑地址指的是机器语言指令中，用来指定一个操作数或者是一条指令的地址。
++ 线性地址：也叫虚拟地址(virtual address)。跟逻辑地址类似，也是一个不真实的地址，如果逻辑地址是对应的硬件平台段式管理转换前地址，那线性地址则对应了硬件页式内存的转换前地址。
+
+---
+
+##### **==讲解逻辑地址转换为物理地址的基本过程==**
+
+如果是段⻚式，则地址变换中要得到物理地址须经过三次内存访问:
+
+1. **访问段表，得到⻚表起始地址;**
+2. **访问⻚表，得到物理⻚号;**
+3. **将物理⻚号与⻚内位移组合，得到物理地址。**
+
+可用软、硬件相结合的方法实现段⻚式地址变换，这样虽然增加了硬件成本和系统开销，但提高了内存的利用率。
+
+---
+
+##### 什么是快表，那你知道多少关于快表的知识？
+
+快表，又称联想寄存器(TLB) ，是一种访问速度比内存快很多的高速缓冲存储器，用来存放当前访问的若干页表项，以加速地址变换的过程。与此对应，内存中的页表常称为慢表。
+
+---
+
+##### **地址变换中，有快表和没快表，有什么区别?**
+
++ 无快表：
+  1. 算页号、页内偏移量 
+  2. 检查页号合法性 
+  3. 查页表，找到页面存放的内存块号 
+  4. 根据内存块号与页内偏移量得到物理地址 
+  5. 访问目标内存单元变换
++ 有快表：
+  1. 算页号、页内偏移量 
+  2. 检查页号合法性 
+  3. 查快表。若命中，即可知道页面存放的内存块号，可直接进行
+  4. 若未命中则查页表，找到页面存放的内存块号，并且将页表项复制到快表中 
+  5. 根据内存块号与页内偏移量得到物理地址 
+  6. 访问目标内存单元
+
+---
+
+##### **程序从堆中动态分配内存时，虚拟内存上怎么操作的**
+
++ 在进行动态内存分配时，例如malloc()函数，操作系统会在硬盘中创建或申请一段虚拟内存空间，并更新到页表(分配一个页表条目(PTE)，使该PTE指向硬盘上这个新创建的虚拟页)，通过PTE建立虚拟页和物理页的映射关系。
+
+  > 页表:是一个存放在物理内存中的数据结构，它记录了虚拟页与物理页的映射关系
+
+---
+
+##### **说一下你理解中的内存?他有什么作用呢?**
+
++ 内存是用来存放数据的硬件。程序执行前需要先放入内存，然后才会被CPU进行处理
++ 在多道程序环境下，系统中有多个程序并发执行，怎么区分各自程序内存的数据？
+  + 给内存的存储单元编地址，每个程序有自己的虚拟地址空间，会映射到不同的物理地址中。
+
+---
+
+##### **操作系统在对内存进行管理的时候需要做些什么**?
+
++  操作系统负责内存空间的分配与回收。
++  操作系统需要提供某种技术从逻辑上对内存空间进行扩充。
++  操作系统需要提供地址转换功能，负责程序的逻辑地址与物理地址的转换。
++  操作系统需要提供内存保护功能。保证各进程在各自存储空间内运行，互不干扰
+
+---
+
+##### ==**动态分区分配算法有哪几种?可以分别说说吗?**==
+
+
+
+---
+
+##### 内存覆盖是什么？有什么特点？
+
++ 由于程序运行时并非任何时候都要访问程序及数据的各个部分，因此可以把用户空间分成为一个固定区和若干个覆盖区。将经常活跃的部分放在固定区，其余部分按照调用关系分段，将即将要访问的段放入覆盖区，其他段放在外存中，在需要调用前，系统将其调入覆盖区，替换覆盖区中原有的段。
++ 覆盖技术的特点：是打破了必须将一个进程的全部信息装入内存后才能运行的限制，但当同时运行程序的代码量大于主存时仍不能运行，内存中能够更新的地方只有覆盖区的段，不在覆盖区的段会常驻内存。
+
+---
+
+##### **内存交换是什么?有什么特点?**
+
++ 内存空间紧张时，系统将内存中某些进程暂时换出外存，把外存中某些已具备运行条件的进程换入内存(进程在内存与磁盘间动态调度)
+
++ 换入：把准备好竞争CPU运行的程序从辅存移到内存。 
++ 换出：把处于等待状态(或CPU调度原则下被剥夺运行权力)的程序从内存移到辅存，把内存空间腾出来。
+
+---
+
+##### **在发生内存交换时，有些进程是被优先考虑的?你可以说一说吗?**
+
++ 优先换出阻塞进程;
++ 换出优先级低的进程；为了防止优先级低的进程在被调入内存后很快又被换出，有的系统还会考虑进程在内存的驻留时间(注意: PCB 会常驻内存，不会被换出外存)
+
+---
+
+##### **内存交换和覆盖有什么区别?**
+
++ 交换技术主要是在不同进程(或作业)之间进行
+
++ 覆盖则用于同一程序或进程中。
+
+---
+
+##### **内存交换中，被换出的进程保存在哪里?**
+
++ 保存在磁盘中，也就是外存中。
+
++ 具有对换功能的操作系统中，通常把磁盘空间分为文件区和对换区两部分。
+
+  + 文件区主要用于存放文件，主要追求存储空间的利用率，因此对文件区空间的管理采用离散分配方式;
+
+  + 对换区空间只占磁盘空间的小部分，被换出的进程数据就存放在对换区。
+
+    > 由于对换的速度直接影响到系统的整体速度，因此对换区空间的管理主要追求换入换出速度，因此通常对换区采用连续分配方式 。总之，对换区的I/O速度比文件区的更快。
+
+---
+
+##### 交换空间与虚拟内存有什么关系？
+
++ 交换空间
+  + Linux 中的交换空间(Swap space)在 **物理内存** (RAM)被充满时被使用。如果系统需要更多的内存资源，而物理内存已经充满，内存中不活跃的页就会被移到交换空间去。
+  + 虽然交换空间可以为带有少量内存的机器提供帮助，但是这种方法不应该被当做是对内存的取代。交换空间位于硬盘驱动器上，它比进入物理内存要慢。
+  + 交换空间的总大小应该相当于你的计算机内存的两倍和 32 MB这两个值中较大的一个，但是它不能超过 2048MB(2 GB)。
++ 虚拟内存
+  + 虚拟内存是文件数据交叉链接的活动文件。虚拟内存使用的是硬盘的空间。因为内存空间比硬盘空间小太多所以运用了虚拟内存技术，即拿出一部分硬盘空间来充 当内存使用。，
+
+---
+
+##### Windows和Linux环境下内存分布情况
+
+从 **低到高**  分别是 7 种不同的内存段:
+
+1. 程序文件段：包括二进制可执行代码;
+2. 已初始化数据段：包括静态常量;
+3. 未初始化数据段：包括未初始化的静态变量; 
+4. 堆段：包括动态分配的内存，从低地址开始向上增长; 
+5. 文件映射段：包括动态库、共享内存等，从低地址开始向上增长(跟硬件和内核版本有关) 
+6. 栈段：包括局部变量和函数调用的上下文。栈的大小是固定的，一般是 8 MB。系统也提供了参数以便我们自定义大小
+7. 内核空间
+
+---
+
+##### 一般情况下在Linux/windows平台下栈空间的大小
+
++ Linux下：非编译器决定栈大小，由操作系统环境决定，默认是8192KB(8M)
+
+  ```bash
+  ulimit -a       # 显示当前栈的大小 (ulimit为系统命令，非编译器命令) 
+  ulimit -s 32768 # 设置当前栈的大小为32M
+  ```
+
++ Windows下：栈的大小是被记录在可执行文件中的，由编译器来设置。VC++ 6.0 默认的栈空间是1M。
+
+  + 选择 "Project->Setting"
+  + 选择 "Link"
+  + 选择 "Category"中的 "Output"
+  + 在 "Stack allocations"中的"Reserve:"中输栈的大小
+
+---
+
+##### **从堆和栈上建立对象哪个快?(考察堆和栈的分配效率比较)**
+
++ 从分配和释放方面：
+  + 堆在分配和释放时都要调用函数(malloc,free)，比如分配时会到堆空间去寻找足够大小的空间(因为多次分配释放后会造成内存碎片)，这些都会花费一定的时间，而栈却不需要这些。
++ 从访问时间方面：
+  + 访问堆的一个具体单元，需要两次访问内存，第一次得取得指针，第二次才是真正的数据，而栈只需访问一次。
+  + 另外，堆的内容被操作系统交换到外存的概率比栈大，栈一般是不会被交换 出去的。
+
+---
+
+##### **常见内存分配方式有哪些?**
+
+1.  从静态存储区域分配。内存在程序编译的时候就已经分配好，这块内存在程序的整个运行期间都存在。例如全局变量，static变量。
+2. 在栈上创建。在执行函数时，函数内局部变量的存储单元都可以在栈上创建，函数执行结束时这些存储单元自动被释放。栈内存分配运算内置于处理器的指令集中，效率很高，但是分配的内存容量有限。
+3. 从堆上分配，亦称动态内存分配。程序在运行的时候用malloc或new申请任意多少的内存，程序员自己负责在何时用free或delete释放内存。动态内存的生存期由我们决定，使用非常灵活，但问题也最多。
+
+---
+
+##### **常见内存分配内存错误**
+
+1. 内存分配未成功，却使用了它。
+   + malloc或new申请内存，用if(p!=NULL)进行防错处理。
+2. 内存分配虽然成功，但是尚未初始化就引用它。
+   + 没有初始化的观念;
+   + 误以为内存的缺省初值全为零
+3. 内存分配成功并且已经初始化，但操作越过了内存的边界。
+4. 忘记了释放内存，造成内存泄露。
+   + 动态内存的申请与释放必须配对，malloc/free，new/delete
+5. 释放了内存却继续使用它。
+
+---
+
+##### **在执行malloc申请内存的时候，操作系统是怎么做的?**
+
++ 从操作系统层面上看，malloc 是通过两个系统调用来实现的: brk和mmap
++ 进程先通过这两个系统调用获取或者扩大进程的虚拟内存，获得相应的虚拟地址，在访问这些虚拟地址的时候，通过缺页中断，让内核分配相应的物理内存，这样内存分配才算完成。
+
+> + brk是将进程数据段(.data)的最高地址指针向高处移动，这一步可以扩大进程在运行时的堆大小 
+> + mmap是在进程的虚拟地址空间中寻找一块空闲的虚拟内存，这一步可以获得一块可以操作的堆内存。
+> + 通常，分配的内存小于128k时，使用brk调用来获得虚拟内存，大于128k时就使用mmap来获得虚拟内存。
+
+---
+
+#####  **抖动你知道是什么吗?它也叫颠簸现象**
+
++  刚刚换出的页面立刻换入内存，刚刚换入的页面又要换出外存，这种频繁的页面调度行为称为 **抖动，或颠簸** 。
++  产生抖动的主要原因是：进程频繁访问的页面数目高于可用的物理块数(分配给进程的物理块不够)
+   +  为进程分配的物理块太少，会使进程发生抖动现象。
+   +  为进程分配的物理块太多，又会降低系统整体的并发度，降低某些资源的利用率
+
+---
+
+##### 介绍一下内部碎片与外部碎片
+
++ 内碎片：分配给某些进程的内存区域中有些部分没用上，常见于固定分配方式
+  + 内存总量相同，100M
+  + 固定分配，将100M分割成10块，每块10M，一个程序需要45M，那么需要分配5块，第五块只用了5M， 剩下的5M就是内部碎片;
+  + 分段式分配，按需分配，一个程序需要45M，就给分片45MB，剩下的55M供其它程序使用，不存在内部碎片。
++ 外碎片：内存中某些空闲区因为比较小，而难以利用上，一般出现在内存动态分配方式中
+  + 分段式分配：内存总量100M，依次分配5M，15M，50M，25M，程序运行一段时间之后，5M，15M的程序运行完毕释放内存，其他程序还在运行，需要分配一个10M供其它程序使用，就会存在5M+5M的外部碎片
+
+---
+
+**如何消除碎片文件** 
+
++  对于外部碎片，通过 **紧凑技术** 消除，就是操作系统不时地对进程进行移动和整理。但是这需要动态重定位寄存器地支持，且相对费时。
++ 分⻚技术就是为了解决碎片问题，分页是把整个虚拟和物理内存空间切成一段段固定尺寸的大小。 这样一个连续并且尺寸固定的内存空间就是⻚(Page) 。
++ 分页会出现页表过大的缺陷，这就引出了多级页表
++ 多级⻚表虽然解决了空间上的问题，但是虚拟地址到物理地址的转换就多了几道转换的工序，这显然就降低了这俩地址转换的速度，也就是带来了时间上的开销。这就引出了TLB
+
+---
+
+### 6.磁盘
+
+##### 读写一个磁盘块的时间的影响因素有哪些？
+
++ 旋转时间(主轴转动盘面，使得磁头移动到适当的扇区上)
++ 寻道时间(制动手臂移动，使得磁头移动到适当的磁道上)
++ 实际的数据传输时间
+
+> 其中，寻道时间最长，因此磁盘调度的主要目标是使磁盘的平均寻道时间最短
+
+##### 介绍常见的几种磁盘调度算法
+
+1.  **先来先服务** ：按照磁盘请求的顺序进行调度。 
+   + 优点：公平和简单。
+   + 缺点：未对寻道做任何优化，使平均寻道时间可能较长。
+2.  **最短寻道时间优先** ：优先调度与当前磁头所在磁道距离最近的磁道。
+   + 优点：平均寻道时间比较低
+   + 缺点：不够公平。如果新到达的磁道请求总是比一个在等待的磁道请求近，那么在等待的磁道请求会一直等待下去，也就是出现饥饿现象。
+3.  **电梯扫描算法** ：与电梯运行类似，按一个方向来进行磁盘调度，直到该方向上没有未完成的磁盘请求，然后改变方向
+   + 因为考虑了移动方向，因此所有的磁盘请求都会被满足，解决了 SSTF 的饥饿问题。
 
 ---
 
 ## 八.数据库
 
-
+### 1,Mysql
 
 + truncate 和delete区别
 
-
-
 + 索引分类和原理----B+树，具体分析
-
-
 
 + 数据库锁有哪些，造成原因
 
-
-
 + 如果在数据库上进行了误操作该怎么处理
-
-
 
 + 数据库sga问题
 
-
-
 + B树和B+树的区别，ACID, 索引种类，explain关键字
-
-
 
 + 介绍一下数据库索引(B+树、哈希索引、LSM树之类)
 
-
-
 + 索引的类别和使用场景
 +  Mysql如何实现主从一致性
+
+---
+
++   **你知道关系型和非关系型数据库吗？区别了解多少?**
+  + 关系型数据库
+    + 采用关系模型来组织数据的数据库。简单来说，关系模式就是二维表格模型。代表：SQL Server,Oracle,Mysql
+    + 优点：
+      + 容易理解，二维表的结构非常贴近现实世界，二维表格，容易理解。
+      + 使用方便，通用的sql语句使得操作关系型数据库非常方便。
+      + 易于维护，数据库的ACID属性，大大降低了数据冗余和数据不一致的概率。
+    + 缺点：
+      + 不适合海量数据的读写效率。对于传统关系型数据库来说，硬盘I/o是一个很大的挑战。
+      + 无高扩展性和可用性。在基于web的结构中，数据库是最难以横向拓展的
+  + 非关系型数据库
+    + 非关系型数据库也叫NOSQL，采用键值对的形式进行存储。代表：MongoDB，Redis
+    + 优点：
+      + 不需要经过SQL层的解析，读写效率高。 
+      + 基于键值对，数据的扩展性很好。 
+      + 支持多种类型数据的存储，如图片，文档等等。
+    + 缺点：
+      + 由于Nosql约束少，不能像sql那样提供where字段属性的查询。因此适合存储较为简单的数据。有一些不能够持久化数据，所以需要和关系型数据库结合。
+
+---
+
+
+
+
+
+### 2.Redis
+
+
+
+
 
 
 
